--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -1,63 +1,63 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
-  "copyErrorAndQuit": "Copy error and quit",
-  "unknown": "Unknown",
-  "databaseError": "Database Error",
-  "mainMenuFile": "&File",
-  "mainMenuEdit": "&Edit",
-  "mainMenuView": "&View",
-  "mainMenuWindow": "&Window",
-  "mainMenuHelp": "&Help",
-  "appMenuHide": "Hide",
-  "appMenuHideOthers": "Hide Others",
-  "appMenuUnhide": "Show All",
-  "appMenuQuit": "Quit Session",
-  "editMenuUndo": "Undo",
-  "editMenuRedo": "Redo",
-  "editMenuCut": "Cut",
-  "editMenuCopy": "Copy",
-  "editMenuPaste": "Paste",
-  "editMenuPasteAndMatchStyle": "Paste and Match Style",
+  "privacyPolicy": "الشروط وسياسة الخصوصية",
+  "copyErrorAndQuit": "نسخ الخطأ والخروج",
+  "unknown": "مجهول",
+  "databaseError": "خطأ في قاعدة البيانات",
+  "mainMenuFile": "&ملف",
+  "mainMenuEdit": "&تعديل",
+  "mainMenuView": "&عرض",
+  "mainMenuWindow": "&نافذة",
+  "mainMenuHelp": "&مساعدة",
+  "appMenuHide": "إخفاء",
+  "appMenuHideOthers": "إخفاء الآخرين",
+  "appMenuUnhide": "إظهار الكل",
+  "appMenuQuit": "إنهاء سِيشَن",
+  "editMenuUndo": "تراجع",
+  "editMenuRedo": "إعادة",
+  "editMenuCut": "قص",
+  "editMenuCopy": "نسخ",
+  "editMenuPaste": "لصق",
+  "editMenuPasteAndMatchStyle": "لصق ومطابقة النمط",
   "editMenuDelete": "أحذف  ",
   "editMenuSelectAll": "Select All",
-  "windowMenuClose": "Close Window",
-  "windowMenuMinimize": "Minimize",
-  "windowMenuZoom": "Zoom",
-  "windowMenuBringAllToFront": "Bring All to Front",
-  "viewMenuResetZoom": "Actual Size",
-  "viewMenuZoomIn": "Zoom In",
-  "viewMenuZoomOut": "Zoom Out",
-  "viewMenuToggleFullScreen": "Toggle Full Screen",
-  "viewMenuToggleDevTools": "Toggle Developer Tools",
-  "contextMenuNoSuggestions": "No Suggestions",
-  "openGroupInvitation": "Open group invitation",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "windowMenuClose": "أغلق النافذة",
+  "windowMenuMinimize": "صغِّر",
+  "windowMenuZoom": "تكبير",
+  "windowMenuBringAllToFront": "أحضر الجميع للأمام",
+  "viewMenuResetZoom": "الحجم الحقيقي",
+  "viewMenuZoomIn": "تكبير",
+  "viewMenuZoomOut": "تصغير",
+  "viewMenuToggleFullScreen": "الانتقال إلى ملء الشاشة",
+  "viewMenuToggleDevTools": "الانتقال إلى أدوات المطور",
+  "contextMenuNoSuggestions": "لا اقتراحات",
+  "openGroupInvitation": "دعوة المجموعة المفتوحة",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "الانضمام إلى $roomName$؟",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "هل أنت متأكد من أنك تريد الانضمام إلى المجموعة المفتوحة $roomName$؟",
+  "enterSessionIDOrONSName": "أدخل معرف سِيشَن أو اسم ONS",
   "loading": "جاري التحميل",
-  "optimizingApplication": "Optimizing application...",
-  "done": "Done",
+  "optimizingApplication": "تحسين التطبيق...",
+  "done": "تم",
   "me": "أنا",
   "view": "معاينة ",
   "youLeftTheGroup": "لقد غادرت المجموعة ",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "youGotKickedFromGroup": "تمت إزالتك من المجموعة.",
+  "unreadMessage": "رسالة غير مقروءة",
+  "unreadMessages": "الرسائل غير المقروءة",
   "debugLogExplanation": "هذه السجلاّت سيتم نشرها علنا ليتمكن المساهمون من معاينتها. ربما ترغب فى تعديلها أو التحقق منها قبل إرسالها. ",
-  "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
+  "debugLogError": "حدث خطأ ما في الرفع! الرجاء النظر في إضافة السجل الخاص بك يدوياً إلى الخطأ الذي ستقوم بإيداعه.",
   "reportIssue": "بلّغ عن مشكل",
   "gotIt": "واضح",
   "submit": "إرسال",
-  "markAllAsRead": "Mark All as Read",
-  "incomingError": "Error handling incoming message",
-  "media": "Media",
+  "markAllAsRead": "تحديد الكل كمقروء",
+  "incomingError": "خطأ في معالجة الرسالة الواردة",
+  "media": "الوسائط",
   "mediaEmptyState": "You don’t have any media in this conversation",
-  "documents": "Documents",
+  "documents": "الوثائق",
   "documentsEmptyState": "You don’t have any documents in this conversation",
-  "today": "Today",
-  "yesterday": "Yesterday",
+  "today": "اليوم",
+  "yesterday": "الأمس",
   "thisWeek": "This Week",
-  "thisMonth": "This Month",
+  "thisMonth": "هذا الشهر",
   "voiceMessage": "رسالة صوتية",
   "dangerousFileType": "Attachment type not allowed for security reasons",
   "stagedPreviewThumbnail": "Draft thumbnail link preview for $domain$",
@@ -71,8 +71,9 @@
   "offline": "غير متصل بالإنترنت  ",
   "checkNetworkConnection": "الرجاء التحقق من الاتصال بالشبكة",
   "attemptingReconnection": "جاري اعادة الاتصال خلال $reconnect_duration_in_seconds$ ثواني",
-  "submitDebugLog": "Debug log",
+  "submitDebugLog": "سجل تصحيح الأخطاء",
   "debugLog": "Debug Log",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Go to Release Notes",
   "goToSupportPage": "Go to Support Page",
   "menuReportIssue": "Report an Issue",
@@ -109,13 +110,14 @@
   "continue": "Continue",
   "error": "خطأ",
   "delete": "أحذف  ",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "Are you sure? Clicking 'delete' will permanently remove this message from this device only.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteThisMessage": "أحذف هذه الرسالة",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "حذف الرسائل",
   "deleted": "Deleted",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "مِن",
   "to": "to",
   "sent": "أُرسلت",
@@ -124,14 +126,6 @@
   "groupMembers": "أفراد المجموعة",
   "moreInformation": "More information",
   "resend": "Resend",
-  "deleteMessage": "حذف الرسالة",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "حذف الرسائل",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "حذف المحادثة بصفة نهائية ؟",
   "clearAllData": "Clear All Data",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -144,21 +138,22 @@
   "addACaption": "Add a caption...",
   "copy": "Copy",
   "copySessionID": "Copy Session ID",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "copyOpenGroupURL": "نسخ رابط المجموعة",
   "save": "حفظ",
-  "saved": "Saved",
-  "permissions": "Permissions",
+  "saveLogToDesktop": "Save log to desktop",
+  "saved": "تم الحفظ",
+  "permissions": "الصلاحيات",
   "general": "عام",
-  "tookAScreenshot": "$name$ took a screenshot",
-  "savedTheFile": "Media saved by $name$",
-  "linkPreviewsTitle": "Send Link Previews",
-  "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
-  "mediaPermissionsDescription": "Allow access to camera and microphone",
-  "spellCheckTitle": "Spell Check",
-  "spellCheckDescription": "Enable spell check of text entered in message composition box",
-  "spellCheckDirty": "You must restart Session to apply your new settings",
+  "tookAScreenshot": "قام $name$ بتصوير الشاشة",
+  "savedTheFile": "قام $name$ بحفظ الوسائط",
+  "linkPreviewsTitle": "إرسال معاينات الروابط",
+  "linkPreviewDescription": "المعاينات مدعومة لمعظم الروابط",
+  "linkPreviewsConfirmMessage": "لن يكون لديك حماية كاملة للبيانات الوصفية عند إرسال معاينات الرابط.",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
+  "spellCheckTitle": "التدقيق الإملائي",
+  "spellCheckDescription": "تفعيل التحقق الإملائي على النص المدخل في مربع تكوين الرسالة",
+  "spellCheckDirty": "يجب عليك إعادة تشغيل سِيشَن لتطبيق إعداداتك الجديدة",
   "notifications": "الإشعارات",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
@@ -234,20 +229,20 @@
   "autoUpdateNewVersionTitle": "Session update available",
   "autoUpdateNewVersionMessage": "There is a new version of Session available.",
   "autoUpdateNewVersionInstructions": "Press Restart Session to apply the updates.",
-  "autoUpdateRestartButtonLabel": "Restart Session",
-  "autoUpdateLaterButtonLabel": "Later",
-  "autoUpdateDownloadButtonLabel": "Download",
+  "autoUpdateRestartButtonLabel": "قم بإعادة تشغيل سِيشَن",
+  "autoUpdateLaterButtonLabel": "لاحقاً",
+  "autoUpdateDownloadButtonLabel": "تنزيل",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
-  "autoUpdateDownloadInstructions": "Would you like to download the update?",
+  "autoUpdateDownloadInstructions": "هل تريد تنزيل التحديث؟",
   "leftTheGroup": "$name$ left the group",
-  "multipleLeftTheGroup": "$name$ left the group",
-  "updatedTheGroup": "Group updated",
+  "multipleLeftTheGroup": "$name$ غادر المجموعة",
+  "updatedTheGroup": "تم تحديث المجموعة",
   "titleIsNow": "Group name has been set to '$name$'",
   "joinedTheGroup": "$name$ joined the group",
   "multipleJoinedTheGroup": "$names$ joined the group",
-  "kickedFromTheGroup": "$name$ was removed from the group.",
+  "kickedFromTheGroup": "تمت إزالة $name$ من المجموعة.",
   "multipleKickedFromTheGroup": "$name$ were removed from the group.",
-  "blockUser": "Block",
+  "blockUser": "حَظْر",
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
   "blocked": "Blocked",
@@ -272,10 +267,10 @@
   "failedToAddAsModerator": "Failed to add user as moderator",
   "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
-  "selectMessage": "Select message",
-  "editGroup": "Edit group",
-  "editGroupName": "Edit group name",
-  "updateGroupDialogTitle": "Updating $name$...",
+  "selectMessage": "حدد الرسالة",
+  "editGroup": "تعديل المجموعة",
+  "editGroupName": "تعديل اسم المجموعة",
+  "updateGroupDialogTitle": "جارٍ تحديث $name$...",
   "showRecoveryPhrase": "Recovery Phrase",
   "yourSessionID": "Your Session ID",
   "setAccountPasswordTitle": "Set Account Password",
@@ -285,9 +280,9 @@
   "removeAccountPasswordTitle": "Remove Account Password",
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
-  "confirmPassword": "Confirm password",
+  "confirmPassword": "تأكيد كلمة المرور",
   "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
-  "showRecoveryPhrasePasswordRequest": "Please enter your password",
+  "showRecoveryPhrasePasswordRequest": "الرجاء إدخال كلمة المرور الخاصة بك",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
   "invalidOpenGroupUrl": "Invalid URL",
   "copiedToClipboard": "Copied to clipboard",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
