--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -29,18 +29,18 @@
   "viewMenuZoomOut": "Уменьшить",
   "viewMenuToggleFullScreen": "Переключить полный экран",
   "viewMenuToggleDevTools": "Переключить инструменты разработчика",
-  "contextMenuNoSuggestions": "No Suggestions",
+  "contextMenuNoSuggestions": "Няма предложения",
   "openGroupInvitation": "Open group invitation",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Загрузка...",
   "optimizingApplication": "Оптимизация приложения...",
-  "done": "Done",
+  "done": "Готово",
   "me": "Я",
   "view": "Просмотреть",
   "youLeftTheGroup": "Вы покинули группу.",
-  "youGotKickedFromGroup": "You were removed from the group.",
+  "youGotKickedFromGroup": "Бяхте премахнат от тази група",
   "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "Этот журнал отладки будет открыто опубликован для разработчиков. Вы можете проверить и изменить его перед отправкой.",
@@ -73,13 +73,14 @@
   "attemptingReconnection": "Попытка переподключения через $reconnect_duration_in_seconds$ секунд",
   "submitDebugLog": "Журнал отладки",
   "debugLog": "Журнал отладки",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Перейти к заметкам о релизе",
   "goToSupportPage": "Перейти на страницу поддержки",
   "menuReportIssue": "Сообщить о проблеме",
   "about": "О Session",
   "speech": "Речь",
   "show": "Показать",
-  "sessionMessenger": "Session",
+  "sessionMessenger": "Сесия",
   "search": "Поиск",
   "noSearchResults": "Результаты не найдены для \"$searchTerm$\"",
   "conversationsHeader": "Беседы",
@@ -105,17 +106,18 @@
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
   "ok": "Добре",
   "cancel": "Отменить",
-  "close": "Close",
+  "close": "Затвори",
   "continue": "Продолжить",
   "error": "Ошибка",
   "delete": "Удалить",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "Вы уверены? Нажав 'удалить' вы навсегда удалите данное сообщение только с этого устройства.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteThisMessage": "Удалить сообщение",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Удалить сообщения",
   "deleted": "Deleted",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "От:",
   "to": "Кому:",
   "sent": "Отправлено",
@@ -124,14 +126,6 @@
   "groupMembers": "Участники группы",
   "moreInformation": "Больше информации",
   "resend": "Отправить ещё раз",
-  "deleteMessage": "Удалить Сообщение",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Удалить сообщения",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Удалить этот разговор без возможности восстановления?",
   "clearAllData": "Очистить все данные",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Сохранить",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
   "permissions": "Разрешения",
   "general": "Общие",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Отправлять Предпросмотр Ссылки",
   "linkPreviewDescription": "Previews are supported for most urls.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
-  "mediaPermissionsDescription": "Разрешить доступ к камере и микрофону",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Проверка орфографии",
   "spellCheckDescription": "Включить проверку орфографии текста, введенного в поле создания сообщения",
   "spellCheckDirty": "You must restart Session to apply your new settings",
@@ -258,7 +253,7 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
-  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAll": "Забрани и изтрий всички",
   "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
