--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Neuer Verbindungsversuch in $reconnect_duration_in_seconds$ Sekunden",
   "submitDebugLog": "Diagnoseprotokoll",
   "debugLog": "Diagnoseprotokoll",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Versionshinweise",
   "goToSupportPage": "Support",
   "menuReportIssue": "Problem melden",
@@ -109,13 +110,14 @@
   "continue": "Weiter",
   "error": "Fehler",
   "delete": "Löschen",
-  "deletePublicWarning": "Sind Sie sicher? Dies wird diese Nachricht für alle Teilnehmer dieser offenen Gruppe dauerhaft entfernen.",
-  "deleteMultiplePublicWarning": "Sind Sie sicher? Dies wird diese Nachrichten für alle Teilnehmer dieser offenen Gruppe dauerhaft entfernen.",
-  "deleteWarning": "Bist du sicher? Das Anklicken von »Löschen« wird diese Nachricht unwiderruflich von nur diesem Gerät entfernen.",
-  "deleteMultipleWarning": "Sind Sie sicher? Ein Klick auf „Löschen“ löscht diese Nachrichten dauerhaft von diesem Gerät.",
   "messageDeletionForbidden": "Ihnen fehlt die Berechtigung, Nachrichten anderer Teilnehmer zu löschen",
-  "deleteThisMessage": "Nachrichten löschen",
+  "deleteJustForMe": "Nur für mich löschen",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Alle Nachrichten löschen",
   "deleted": "Gelöscht",
+  "messageDeletedPlaceholder": "Die Nachricht wurde gelöscht",
   "from": "Von:",
   "to": "An:",
   "sent": "Gesendet",
@@ -124,17 +126,9 @@
   "groupMembers": "Gruppenmitglieder",
   "moreInformation": "Mehr Informationen",
   "resend": "Erneut Senden",
-  "deleteMessage": "Nachrichten Löschen",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Alle Nachrichten löschen",
-  "deleteMessageForEveryone": "Nachricht für alle löschen",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Nachrichten für alle löschen",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Soll diese Unterhaltung unwiderruflich gelöscht werden?",
   "clearAllData": "Alle Daten löschen",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "Dies wird all deine Nachrichten und Kontakte permanent löschen.",
   "deleteContactConfirmation": "Möchten Sie diese Unterhaltung wirklich löschen?",
   "quoteThumbnailAlt": "Miniaturbild aus zitierter Nachricht",
   "imageAttachmentAlt": "Bildanhang",
@@ -146,6 +140,7 @@
   "copySessionID": "Session-ID kopieren",
   "copyOpenGroupURL": "Gruppen-URL kopieren",
   "save": "Speichern",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Gespeichert",
   "permissions": "Berechtigungen",
   "general": "Allgemein",
@@ -153,9 +148,9 @@
   "savedTheFile": "Medien gespeichert von $name$",
   "linkPreviewsTitle": "Link-Vorschauen Senden",
   "linkPreviewDescription": "Vorschau wird für die meisten URLs unterstützt",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Mikrofon und Kamera",
-  "mediaPermissionsDescription": "Zugriff auf Kamera und Mikrofon erlauben",
+  "linkPreviewsConfirmMessage": "Beim Senden von Link-Vorschauen sind Ihre Metadaten nicht vollständig geschützt.",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Rechtschreibprüfung",
   "spellCheckDescription": "Rechtschreibprüfung für im Nachrichteneingabefeld eingegebenen Text aktivieren",
   "spellCheckDirty": "Sie müssen Session neu starten, um die neuen Einstellungen zu übernehmen",
@@ -340,7 +335,7 @@
   "onlyAdminCanRemoveMembersDesc": "Nur der Ersteller der Gruppe kann Benutzer entfernen",
   "createAccount": "Konto Erstellen",
   "signIn": "Einloggen",
-  "startInTrayTitle": "Start in Tray",
+  "startInTrayTitle": "Im Infobereich starten",
   "startInTrayDescription": "Wollen sie Session als minimierten Anwendung starten ",
   "yourUniqueSessionID": "Das ist Ihre Session ID.",
   "allUsersAreRandomly...": "Ihre Session ID ist die eindeutige Adresse, unter der Personen Sie über Session kontaktieren können. Ihre Session ID ist nicht mit Ihrer realen Identität verbunden, völlig anonym und von Natur aus privat.",
@@ -421,40 +416,51 @@
   "unpinConversation": "Unterhaltung abnehmen",
   "pinConversationLimitTitle": "Limit für angeheftete Unterhaltungen",
   "pinConversationLimitToastDescription": "Du kannst höchstens $number$ Unterhaltungen anheften",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "Erste ungelesene Nachricht ist oben",
   "sendRecoveryPhraseTitle": "Wiederherstellungsphrase zusenden",
   "sendRecoveryPhraseMessage": "Mit der Wiederherstellungsphrase kann auf deinen Account zugegriffen werden. Bist du dir sicher das du sie dir zusenden lassen möchtest?",
   "dialogClearAllDataDeletionFailedTitle": "Daten nicht gelöscht",
   "dialogClearAllDataDeletionFailedDesc": "Die Daten wurden aufgrund eines unbekannten Fehlers nicht gelöscht. Möchten Sie Ihre Daten nur von diesem Gerät löschen?",
   "dialogClearAllDataDeletionFailedTitleQuestion": "Möchten Sie Daten nur von diesem Gerät löschen?",
-  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionFailedMultiple": "Diese Serviceknoten haben die Daten nicht gelöscht: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Möchten Sie nur dieses Gerät entfernen, oder Ihr Konto vollständig löschen?",
-  "deviceOnly": "Device Only",
+  "deviceOnly": "Nur Geräte",
   "entireAccount": "Gesamtes Konto",
-  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "areYouSureDeleteDeviceOnly": "Bist du dir sicher dass du deine Gerätedaten löschen willst?",
+  "areYouSureDeleteEntireAccount": "Sind Sie sicher, dass Sie Ihr gesamtes Konto, einschließlich der Daten im Netzwerk, löschen möchten?",
+  "iAmSure": "Ich bin mir sicher",
   "recoveryPhraseSecureTitle": "Du bist fast fertig!",
   "recoveryPhraseRevealMessage": "Sichern Sie Ihr Konto, indem Sie Ihre Wiederherstellungsphrase speichern. Zeigen Sie Ihre Wiederherstellungsphrase an und speichern Sie diese sicher.",
   "recoveryPhraseRevealButtonText": "Wiederherstellungsphrase anzeigen",
   "notificationSubtitle": "Benachrichtigungen - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "surveyTitle": "Nimm unsere Session Umfrage an",
+  "goToOurSurvey": "Zur Umfrage",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
+  "accept": "Akzeptieren",
+  "decline": "Ablehnen",
+  "endCall": "Anruf beenden",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
+  "unableToCallTitle": "Neuer Anruf konnte nicht gestartet werden",
+  "callMissed": "Entgangener Anruf von $name$",
+  "callMissedTitle": "Anruf verpasst",
+  "noCameraFound": "Keine Kamera gefunden",
+  "noAudioInputFound": "Keine Audioeingabe gefunden",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
