--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Attempting reconnect in $reconnect_duration_in_seconds$ seconds",
   "submitDebugLog": "گزارش خطاء",
   "debugLog": "گزارش خطا",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "رفتن به یادداشت های ریلیز",
   "goToSupportPage": "رفتن به صفحه پشتیبانی",
   "menuReportIssue": "گزارش مشکل",
@@ -109,13 +110,14 @@
   "continue": "ادامه",
   "error": "خطا",
   "delete": "پاک کن",
-  "deletePublicWarning": "آیا مطمئن هستید می‌خواهید این پیام را برای همگان در این گروه به صورت دائمی پاک کنید؟",
-  "deleteMultiplePublicWarning": "آیا مطمئن هستید می‌خواهید این پیام‌ها را برای همگان در این گروه به صورت دائمی پاک کنید؟",
-  "deleteWarning": "آیا مطمئن هستید؟ کلیک روی 'حذف' این پیام را برای همیشه از روی این دستگاه حذف خواهد کرد.",
-  "deleteMultipleWarning": "آیا مطمئن هستید؟ با کلیک بر روی 'حذف'، این پیام‌ها فقط از این دستگاه حذف خواهد شد.",
   "messageDeletionForbidden": "شما دسترسی برای حذف پیام دیگران را ندارید",
-  "deleteThisMessage": "این پیام را حذف کن",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "حذف پیام‌ها",
   "deleted": "حذف شده",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "از",
   "to": "to",
   "sent": "ارسال شد",
@@ -124,17 +126,9 @@
   "groupMembers": "اعضای گروه",
   "moreInformation": "اطلاعات بیشتر",
   "resend": "ارسال مجدد",
-  "deleteMessage": "حذف پیام",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "حذف پیام‌ها",
-  "deleteMessageForEveryone": "حذف پیام برای همگان",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "حذف پیام‌ها برای همگان",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "آیا می‌خواهید این گفتگو را برای همیشه حذف کنید؟",
   "clearAllData": "پاک‌سازی همه داده‌ها",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "این کار برای همیشه پیام ها و مخاطبین شما را حذف می کند .",
   "deleteContactConfirmation": "آیا مطمئن هستید که می‌خواهید این مکالمه را حذف کنید؟",
   "quoteThumbnailAlt": "پیش‌نمایش تصویر از پیام نقل قول شده",
   "imageAttachmentAlt": "تصویر پیوست شده به پیام",
@@ -146,6 +140,7 @@
   "copySessionID": "کپی شناسه‌ی Session",
   "copyOpenGroupURL": "کپی آدرس گروه",
   "save": "ذخیره",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "ذخیره شده",
   "permissions": "دسترسی ها",
   "general": "عمومی",
@@ -153,9 +148,9 @@
   "savedTheFile": "رسانه توسط $name$ ذخیره شد",
   "linkPreviewsTitle": "ارسال پیش‌نمایش لینک",
   "linkPreviewDescription": "پیش‌نمایش‌ها برای اکثر آدرس‌ها پشتیبانی می‌شوند",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "میکروفون و دوربین",
-  "mediaPermissionsDescription": "اجازه دسترسی به دوربین و میکروفون",
+  "linkPreviewsConfirmMessage": "زمانی کی پیش نمایش لینک ها را می فرستید و دریافت می کنید فراداده یا متا دیتای شما محافظت نخواهد شد.",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "بررسی املا",
   "spellCheckDescription": "فعال سازی کنترل املاء متن وارد شده در باکس پیام نویسی",
   "spellCheckDirty": "برای اعمال تنظیمات جدید نیاز است Session را دوباره راه‌اندازی کنید",
@@ -238,7 +233,7 @@
   "autoUpdateLaterButtonLabel": "بعدا",
   "autoUpdateDownloadButtonLabel": "دانلود",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
-  "autoUpdateDownloadInstructions": "Would you like to download the update?",
+  "autoUpdateDownloadInstructions": "آیا میخواهید بروز رسانی را دانلود کنید ؟",
   "leftTheGroup": "$name$ گروه را ترک کرد",
   "multipleLeftTheGroup": "$name$ گروه را ترک کرد",
   "updatedTheGroup": "گروه آپدیت شد",
@@ -252,13 +247,13 @@
   "unblocked": "رفع مسدودی",
   "blocked": "مسدود شده",
   "blockedSettingsTitle": "مخاطبین مسدود شده",
-  "unbanUser": "Unban User",
+  "unbanUser": "غیر مسدود کردن کاربر",
   "unbanUserConfirm": "Are you sure you want to unban user?",
-  "userUnbanned": "User unbanned successfully",
-  "userUnbanFailed": "Unban failed!",
+  "userUnbanned": "کاربر با موفقیت غیر مستود شد",
+  "userUnbanFailed": "غیر مستود کردن شکست خورد!",
   "banUser": "مسدود کردن کاربر",
   "banUserConfirm": "Are you sure you want to ban user?",
-  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAll": "مستود کردن کاربر و حذف کردن داده های آن",
   "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "مسدود کردن شکست خورد!",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "محدودیت سنجاق کردن گفتگوها",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "اعلان ها - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
