--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Yritetään uudelleen $reconnect_duration_in_seconds$ sekunnin kuluttua",
   "submitDebugLog": "Virheenkorjausloki",
   "debugLog": "Virheenkorjausloki",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Siirry julkaisutietoihin",
   "goToSupportPage": "Siirry tukisivulle",
   "menuReportIssue": "Ilmoita ongelmasta",
@@ -109,13 +110,14 @@
   "continue": "Jatka",
   "error": "Virhe",
   "delete": "Poista",
-  "deletePublicWarning": "Oletko varma? Tämä poistaa pysyvästi tämän viestin kaikilta avoimen ryhmän jäseniltä.",
-  "deleteMultiplePublicWarning": "Oletko varma? Tämä poistaa kaikki nämä viesti kaikilta jäseniltä avoimessa ryhmässä.",
-  "deleteWarning": "Oletko varma? Tämä poistaa pysyvästi tämän viestin ainoastaan tästä laitteesta.",
-  "deleteMultipleWarning": "Oletko varma? Painamalla 'Poista', kaikki nämä viestit poistetaan pysyvästi ainoastaan tältä laitteelta.",
   "messageDeletionForbidden": "Sinulla ei ole oikeutta poistaa toisten käyttäjien viestejä",
-  "deleteThisMessage": "Poista tämä viesti",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Poista viestit",
   "deleted": "Poistettu",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Lähettäjä",
   "to": "vastaanottaja",
   "sent": "Lähetetty",
@@ -124,14 +126,6 @@
   "groupMembers": "Ryhmän jäsenet",
   "moreInformation": "Lisätietoja",
   "resend": "Uudelleenlähetä",
-  "deleteMessage": "Poista viesti",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Poista viestit",
-  "deleteMessageForEveryone": "Poista viesti kaikilta",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Poista viesti kaikilta",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Poistetaanko tämä keskustelu pysyvästi?",
   "clearAllData": "Poista kaikki data",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Kopioi Session ID",
   "copyOpenGroupURL": "Kopioi ryhmän URL -osoite",
   "save": "Tallenna",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Tallennettu",
   "permissions": "Käyttöoikeudet",
   "general": "Yleistä",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Lähetä linkin esikatselu",
   "linkPreviewDescription": "Esikatselut ovat tuettuja useimmilla URL-osoitteilla",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Mikrofoni ja kamera",
-  "mediaPermissionsDescription": "Myönnä kameran ja mikrofonin käyttöoikeus",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Oikeinkirjoituksen tarkistus",
   "spellCheckDescription": "Ota käyttöön viestilaatikkoon kirjoitetun tekstin oikeinkirjoituksen tarkistus",
   "spellCheckDirty": "Sinun täytyy uudelleenkäynnistää Session -sovellus ottaaksesi käyttöön asetusten muutokset",
@@ -421,6 +416,7 @@
   "unpinConversation": "Irroita keskustelu",
   "pinConversationLimitTitle": "Kiinnitettyjen keskuteluiden raja",
   "pinConversationLimitToastDescription": "Voit kiinnittää enintään $number$ keskustelua",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "Viimeisin lukematon viesti on ylimpänä",
   "sendRecoveryPhraseTitle": "Lähetetään palautuslausetta",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
