--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Tentativo di riconessione tra $reconnect_duration_in_seconds$ secondi.",
   "submitDebugLog": "Log di debug",
   "debugLog": "Log di debug",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Vai alle note di rilascio",
   "goToSupportPage": "Vai alla pagina di supporto",
   "menuReportIssue": "Segnala un problema",
@@ -109,13 +110,14 @@
   "continue": "Continua",
   "error": "Errore",
   "delete": "Cancella",
-  "deletePublicWarning": "Sei sicuro? Questo rimuoverà permanentemente questo messaggio a tutti in questo gruppo aperto.",
-  "deleteMultiplePublicWarning": "Sei sicuro? Questo rimuoverà permanentemente questi messaggi a tutti in questo gruppo aperto.",
-  "deleteWarning": "Sicuro? Cliccando 'cancella' rimuoverai definitivamente questo messaggio solo da questo dispositivo.",
-  "deleteMultipleWarning": "Sei sicuro? Fare clic su 'eliminare' rimuoverà permanentemente questi messaggi solo da questo dispositivo.",
   "messageDeletionForbidden": "Non hai il permesso di eliminare i messaggi degli altri",
-  "deleteThisMessage": "Cancella messaggio",
+  "deleteJustForMe": "Elimina solo per me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Elimina messaggi",
   "deleted": "Eliminata",
+  "messageDeletedPlaceholder": "Questo messaggio è stato eliminato",
   "from": "Da:",
   "to": "A:",
   "sent": "Inviato",
@@ -124,17 +126,9 @@
   "groupMembers": "Membri del gruppo",
   "moreInformation": "Maggiori informazioni",
   "resend": "Reinvia",
-  "deleteMessage": "Cancella Messaggio",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Elimina messaggi",
-  "deleteMessageForEveryone": "Elimina Messaggio Per Tutti",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Elimina Messaggi Per Tutti",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Rimuovere definitivamente la conversazione?",
   "clearAllData": "Elimina tutti i dati",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "Ciò eliminerà permanentemente i tuoi messaggi e contatti.",
   "deleteContactConfirmation": "Sei sicuro di voler eliminare questa conversazione?",
   "quoteThumbnailAlt": "Anteprima dell'immagine dal messaggio citato",
   "imageAttachmentAlt": "Immagine allegata a un messaggio",
@@ -146,6 +140,7 @@
   "copySessionID": "Copia Session ID",
   "copyOpenGroupURL": "Copia L'Url Del Gruppo",
   "save": "Salva",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Salvato",
   "permissions": "Permessi",
   "general": "Generale",
@@ -153,9 +148,9 @@
   "savedTheFile": "Media salvati da $name$",
   "linkPreviewsTitle": "Invia Anteprime Dei Link",
   "linkPreviewDescription": "Previews are supported for most urls.",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microfono e Fotocamera",
-  "mediaPermissionsDescription": "Concedi l'accesso alla fotocamera e al microfono",
+  "linkPreviewsConfirmMessage": "Non avrai la protezione completa dei metadati quando invierai le anteprime dei link.",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Controllo ortografico",
   "spellCheckDescription": "Abilita il controllo ortografico del testo inserito nella casella di composizione",
   "spellCheckDirty": "È necessario riavviare Session per applicare le modifiche",
@@ -421,6 +416,7 @@
   "unpinConversation": "Rimuovi conversazione",
   "pinConversationLimitTitle": "Limite conversazioni fissate",
   "pinConversationLimitToastDescription": "Puoi fissare solo $number$ conversazioni",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "Il primo messaggio non letto è sopra",
   "sendRecoveryPhraseTitle": "Invio Frase Di Recupero",
   "sendRecoveryPhraseMessage": "Stai tentando di inviare la frase di recupero che può essere utilizzata per accedere al tuo account. Sei sicuro di voler inviare questo messaggio?",
@@ -431,30 +427,40 @@
   "dialogClearAllDataDeletionQuestion": "Vuoi formattare solo questo dispositivo o cancellare del tutto l'account?",
   "deviceOnly": "Solo dispositivo",
   "entireAccount": "Tutto l'account",
-  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "areYouSureDeleteDeviceOnly": "Sei sicuro di voler cancellare i dati solo sul tuo dispositivo?",
+  "areYouSureDeleteEntireAccount": "Sei sicuro di voler eliminare l'intero tuo account, inclusi i dati di rete?",
+  "iAmSure": "Sono sicuro",
   "recoveryPhraseSecureTitle": "Hai quasi finito!",
   "recoveryPhraseRevealMessage": "Proteggi il tuo account salvando la tua frase di recupero. Mostra la tua frase di recupero, quindi salvala in modo sicuro per proteggerla.",
   "recoveryPhraseRevealButtonText": "Mostra Frase di Recupero",
   "notificationSubtitle": "Notifiche - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "surveyTitle": "Fai il nostro sondaggio di Session",
+  "goToOurSurvey": "Vai al sondaggio",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
+  "accept": "Accetta",
+  "decline": "Rifiuta",
+  "endCall": "Termina chiamata",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
+  "unableToCallTitle": "Impossibile avviare una nuova chiamata",
+  "callMissed": "Chiamata persa da $name$",
+  "callMissedTitle": "Chiamata persa",
+  "noCameraFound": "Nessuna fotocamera è stata trovata",
+  "noAudioInputFound": "Nessun ingresso audio trovato",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
