--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "$reconnect_duration_in_seconds$ 秒後に再接続を行います。",
   "submitDebugLog": "デバッグログ",
   "debugLog": "デバッグログ",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "リリースノートを閲覧",
   "goToSupportPage": "サポートページへ",
   "menuReportIssue": "バグを報告",
@@ -109,13 +110,14 @@
   "continue": "続行",
   "error": "エラー",
   "delete": "削除",
-  "deletePublicWarning": "削除」を選択したら公開グループからメッセージが永久削除されます。よろしいですか?",
-  "deleteMultiplePublicWarning": "削除」を選択したら公開グループからメッセージが永久削除されます。よろしいですか?",
-  "deleteWarning": "「削除」を選択したら自分の端末からのみメッセージが永久削除されます。よろしいですか？",
-  "deleteMultipleWarning": "「削除」を選択したら自分の端末からのみメッセージが永久削除されます。よろしいですか？",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteThisMessage": "メッセージの削除",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "メッセージを削除",
   "deleted": "メッセージが削除されました",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "From:",
   "to": "To:",
   "sent": "送信",
@@ -124,14 +126,6 @@
   "groupMembers": "グループメンバー",
   "moreInformation": "詳細",
   "resend": "再送",
-  "deleteMessage": "メッセージの削除",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "メッセージを削除",
-  "deleteMessageForEveryone": "全員からメッセージを削除",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "全員からメッセージを削除",
-  "deleteForEveryone": "全員から削除",
   "deleteConversationConfirmation": "この会話を完全に消去しますが，よろしいですか？",
   "clearAllData": "すべてのデータを消去する",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Session ID をコピー",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "保存",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
   "permissions": "アクセス許可",
   "general": "一般",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "リンクプレビューを送る",
   "linkPreviewDescription": "プレビューはImgur、Instagram、Pinterest、RedditおよびYouTubeリンクをサポートしています",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "マイクとカメラ",
-  "mediaPermissionsDescription": "カメラとマイクへのアクセスを許可する",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "スペルチェック",
   "spellCheckDescription": "メッセージボックスに入力されたテキストのスペルチェックを有効にする",
   "spellCheckDirty": "You must restart Session to apply your new settings",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
