--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Bandoma jungtis iš naujo po $reconnect_duration_in_seconds$ sekundžių",
   "submitDebugLog": "Derinimo žurnalas",
   "debugLog": "Derinimo žurnalas",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Pereiti į laidos informaciją",
   "goToSupportPage": "Pereiti į palaikymo puslapį",
   "menuReportIssue": "Pranešti apie klaidą",
@@ -109,13 +110,14 @@
   "continue": "Tęsti",
   "error": "Klaida",
   "delete": "Ištrinti",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "Ar tikrai? Spustelėjus \"Ištrinti\", ši žinutė visiems laikams bus pašalinta tik iš šio įrenginio.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteThisMessage": "Ištrinti šią žinutę",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Ištrinti žinutes",
   "deleted": "Deleted",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Nuo",
   "to": "skirta",
   "sent": "Išsiųsta",
@@ -124,14 +126,6 @@
   "groupMembers": "Grupės dalyviai",
   "moreInformation": "Daugiau informacijos",
   "resend": "Siųsti iš naujo",
-  "deleteMessage": "Ištrinti žinutę",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Ištrinti žinutes",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Ar ištrinti šį pokalbį visiems laikams?",
   "clearAllData": "Išvalyti visus duomenis",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Kopijuoti Session ID",
   "copyOpenGroupURL": "Kopijuoti grupės URL",
   "save": "Įrašyti",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Įrašyta",
   "permissions": "Leidimai",
   "general": "Bendra",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Siųsti nuorodų peržiūras",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Mikrofonas ir kamera",
-  "mediaPermissionsDescription": "Leisti prieigą prie kameros ir mikrofono",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Rašybos tikrinimas",
   "spellCheckDescription": "Įjungti rašybos tikrinimą tekstui, kuris įvedamas į žinutės rašymo langelį",
   "spellCheckDirty": "Norėdami taikyti naujus nustatymus, privalote paleisti Session iš naujo",
@@ -421,6 +416,7 @@
   "unpinConversation": "Atsegti pokalbį",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "surveyTitle": "Dalyvaukite mūsų seanso apklausoje ",
+  "goToOurSurvey": "Eikite į mūsų apklausą",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
+  "accept": "Priimti",
+  "decline": "Atmesti",
+  "endCall": "Baigti pokalbį",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
+  "unableToCallTitle": "Neįmanoma pradėti naujo skambučio",
+  "callMissed": "Praleistas skambutis nuo $name$",
+  "callMissedTitle": "Praleistas skambutis",
+  "noCameraFound": "Kameros nerasta",
+  "noAudioInputFound": "Nerasta garso įvesties",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
