--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Tentando reconectar em $reconnect_duration_in_seconds$ segundos",
   "submitDebugLog": "Registro de depuração ",
   "debugLog": "Registro de depuração ",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Ir para Notas de Lançamento",
   "goToSupportPage": "Ir para Página de Suporte",
   "menuReportIssue": "Relatar um problema",
@@ -109,13 +110,14 @@
   "continue": "Continuar",
   "error": "Erro",
   "delete": "Excluir",
-  "deletePublicWarning": "Você tem certeza? Isso irá remover permanentemente essa mensagem para todos nesse grupo aberto.",
-  "deleteMultiplePublicWarning": "Você tem certeza? Isso irá remover permanentemente essas mensagens para todos nesse grupo aberto.",
-  "deleteWarning": "Tem certeza? Ao clicar em 'Excluir', você remove esta mensagem permanentemente deste dispositivo apenas.",
-  "deleteMultipleWarning": "Você tem certeza? Clicar em 'excluir' irá remover permanentemente essas mensagens apenas desse dispositivo.",
   "messageDeletionForbidden": "Você não tem permissão para excluír as mensagens de outros",
-  "deleteThisMessage": "Excluir mensagem",
+  "deleteJustForMe": "Excluir apenas para mim",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Apagar mensagens",
   "deleted": "Excluído",
+  "messageDeletedPlaceholder": "Esta mensagem foi excluída",
   "from": "De:",
   "to": "Para:",
   "sent": "Enviada",
@@ -124,17 +126,9 @@
   "groupMembers": "Membros do grupo",
   "moreInformation": "Mais informações",
   "resend": "Reenviar",
-  "deleteMessage": "Excluir Mensagem",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Apagar mensagens",
-  "deleteMessageForEveryone": "Excluír mensagem para todos",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Excluír mensagens para todos",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Você deseja apagar esta conversa definitivamente?",
   "clearAllData": "Limpar todos os dados",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "Isso excluirá permanentemente suas mensagens, sessões e contatos.",
   "deleteContactConfirmation": "Tem certeza de que deseja excluir esta conversa?",
   "quoteThumbnailAlt": "Miniatura da imagem na citação",
   "imageAttachmentAlt": "Imagem anexa à mensagem",
@@ -146,6 +140,7 @@
   "copySessionID": "Copiar ID Session",
   "copyOpenGroupURL": "Copiar URL do grupo",
   "save": "Salvar",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Salvo",
   "permissions": "Permissões",
   "general": "Geral",
@@ -153,9 +148,9 @@
   "savedTheFile": "Mídia salva por $name$",
   "linkPreviewsTitle": "Enviar Pré-Visualizações De Links",
   "linkPreviewDescription": "Previews are supported for most urls.",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microfone e Câmera",
-  "mediaPermissionsDescription": "Permitir acesso à câmera e ao microfone",
+  "linkPreviewsConfirmMessage": "Você não terá proteção completa de metadados ao receber pré-visualização de links.",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Corretor ortográfico",
   "spellCheckDescription": "Ativar a verificação ortográfica do texto digitado na caixa de edição de mensagens",
   "spellCheckDirty": "Você precisa reiniciar o Session para aplicar as novas configurações",
@@ -259,7 +254,7 @@
   "banUser": "Banir usuário",
   "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Banir e Excluir Tudo",
-  "banUserAndDeleteAllConfirm": "Tu tens certeza de que queres banir o usuário e apagar todas as suas mensagens?",
+  "banUserAndDeleteAllConfirm": "Tem certeza de que deseja bloquear o usuário e excluir todas suas mensagens?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Banimento falhou!",
   "leaveGroup": "Sair Do Grupo",
@@ -421,6 +416,7 @@
   "unpinConversation": "Desafixar conversa",
   "pinConversationLimitTitle": "Limite de conversas fixadas",
   "pinConversationLimitToastDescription": "Você só pode fixar $number$ conversas",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "A primeira mensagem não lida está acima",
   "sendRecoveryPhraseTitle": "Enviando frase de recuperação",
   "sendRecoveryPhraseMessage": "Tu estás tentando enviar a tua frase de recuperação qual pode ser utilizada para acessar a tua conta. Tu tens certeza de que queres enviar esta mensagem?",
@@ -431,30 +427,40 @@
   "dialogClearAllDataDeletionQuestion": "Tu gostarias de limpar apenas este dispositivo, ou excluir toda a sua conta?",
   "deviceOnly": "Só Dispositivo",
   "entireAccount": "Toda a Conta",
-  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "areYouSureDeleteDeviceOnly": "Você tem certeza que deseja excluir os dados apenas do seu dispositivo?",
+  "areYouSureDeleteEntireAccount": "Tem certeza de que deseja excluir a sua conta completamente, incluindo os dados de rede?",
+  "iAmSure": "Tenho certeza",
   "recoveryPhraseSecureTitle": "Tu estás quase acabando!",
   "recoveryPhraseRevealMessage": "Proteja a sua conta salvando a sua frase de recuperação. Revele a sua frase de recuperação e então armazene-a com segurança para protegê-la.",
   "recoveryPhraseRevealButtonText": "Revelar Frase de Recuperação",
   "notificationSubtitle": "Notificações - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "surveyTitle": "Responda à pesquisa do Session",
+  "goToOurSurvey": "Acessar nossa pesquisa",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
+  "accept": "Aceitar",
+  "decline": "Rejeitar",
+  "endCall": "Encerrando chamada",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
+  "unableToCallTitle": "Não foi possível iniciar nova chamada",
+  "callMissed": "Chamada perdida de $name$",
+  "callMissedTitle": "Chamada perdida",
+  "noCameraFound": "Nenhuma câmera encontrada",
+  "noAudioInputFound": "Nenhuma entrada de áudio encontrada",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
