--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Se încearcă reconectarea în $reconnect_duration_in_seconds$ secunde",
   "submitDebugLog": "Jurnal depanare",
   "debugLog": "Jurnalul de depanare",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Mergi la Notele de Lansare",
   "goToSupportPage": "Mergi la Pagina de Suport",
   "menuReportIssue": "Raportează o problemă",
@@ -109,13 +110,14 @@
   "continue": "Continuă",
   "error": "Eroare",
   "delete": "Șterge",
-  "deletePublicWarning": "Ești sigur? Acest lucru va elimina definitiv acest mesaj pentru toți cei din acest grup deschis.",
-  "deleteMultiplePublicWarning": "Ești sigur? Acest lucru va șterge definitiv aceste mesaje pentru toți cei din acest grup deschis.",
-  "deleteWarning": "Ești sigur? Apăsând 'ștergere' vei șterge permanent acest mesaj doar de pe acest dispozitiv.",
-  "deleteMultipleWarning": "Ești sigur? Apăsând 'ștergere' vei șterge permanent acest mesaj doar de pe acest dispozitiv.",
   "messageDeletionForbidden": "Nu aveţi permisiunea de a şterge mesajele altora",
-  "deleteThisMessage": "Şterge acest mesaj",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Șterge mesajele",
   "deleted": "Șters",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "De la",
   "to": "către",
   "sent": "Trimis",
@@ -124,14 +126,6 @@
   "groupMembers": "Membrii grupului",
   "moreInformation": "Mai multe informații",
   "resend": "Retrimite",
-  "deleteMessage": "Şterge mesajul",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Șterge mesajele",
-  "deleteMessageForEveryone": "Ştergeţi mesajul pentru toată lumea",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Ştergeţi mesajele pentru toată lumea",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Şterg permanent acestă conversație?",
   "clearAllData": "Șterge toate datele",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Copiază ID-ul Session",
   "copyOpenGroupURL": "Copiază URL-ul grupului",
   "save": "Salvează",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Salvat",
   "permissions": "Permisiuni",
   "general": "General",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Trimite Previzualizări Link",
   "linkPreviewDescription": "Previzualizările sunt suportate pentru majoritatea adreselor URL",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microfon și Cameră",
-  "mediaPermissionsDescription": "Permite accesul la cameră și microfon",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Verificare ortografie",
   "spellCheckDescription": "Activează verificarea ortografică a textului introdus în caseta de compoziție a mesajului",
   "spellCheckDirty": "Trebuie să reporniți Session pentru a aplica noile setări",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
