--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -19,11 +19,11 @@
   "editMenuPaste": "Вставить",
   "editMenuPasteAndMatchStyle": "Вставить с соответствием стилю",
   "editMenuDelete": "Удалить",
-  "editMenuSelectAll": "Выбрать всё",
+  "editMenuSelectAll": "Выбрать все",
   "windowMenuClose": "Закрыть окно",
   "windowMenuMinimize": "Свернуть",
   "windowMenuZoom": "Увеличить",
-  "windowMenuBringAllToFront": "Вынести всё на передний план",
+  "windowMenuBringAllToFront": "Все на передний план",
   "viewMenuResetZoom": "Фактический размер",
   "viewMenuZoomIn": "Увеличить",
   "viewMenuZoomOut": "Уменьшить",
@@ -48,7 +48,7 @@
   "reportIssue": "Сообщить о проблеме",
   "gotIt": "Понятно",
   "submit": "Отправить",
-  "markAllAsRead": "Отметить всё как прочитанное",
+  "markAllAsRead": "Отметить все как прочитанное",
   "incomingError": "Ошибка при обработке входящего сообщения",
   "media": "Медиа",
   "mediaEmptyState": "Нет медиа-файлов",
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Попытка переподключения через $reconnect_duration_in_seconds$ секунд",
   "submitDebugLog": "Журнал отладки",
   "debugLog": "Журнал отладки",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Перейти к заметкам о релизе",
   "goToSupportPage": "Перейти на страницу поддержки",
   "menuReportIssue": "Сообщить о проблеме",
@@ -101,7 +102,7 @@
   "audio": "Аудио",
   "video": "Видео",
   "photo": "Фото",
-  "cannotUpdate": "Не удаётся обновить",
+  "cannotUpdate": "Обновить не удается",
   "cannotUpdateDetail": "Не удалось обновить Session Desktop, но доступна новая версия. Пожалуйста, перейдите на https://getsession.org/ и установите новую версию вручную, затем свяжитесь со службой поддержки или создайте сообщение об этой ошибке.",
   "ok": "ОК",
   "cancel": "Отменить",
@@ -109,13 +110,14 @@
   "continue": "Продолжить",
   "error": "Ошибка",
   "delete": "Удалить",
-  "deletePublicWarning": "Вы уверены? Это навсегда удалит данное сообщение для всех участников этой открытой группы.",
-  "deleteMultiplePublicWarning": "Вы уверены? Это навсегда удалит данные сообщения для всех участников этой открытой группы.",
-  "deleteWarning": "Вы уверены? Нажав 'удалить' вы навсегда удалите данное сообщение только с этого устройства.",
-  "deleteMultipleWarning": "Вы уверены? Нажав 'удалить', вы навсегда удалите данные сообщения только с этого устройства.",
   "messageDeletionForbidden": "У вас недостаточно прав для удаления чужих сообщений",
-  "deleteThisMessage": "Удалить сообщение",
+  "deleteJustForMe": "Удалить только у меня",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Удалить сообщения",
   "deleted": "Удалено",
+  "messageDeletedPlaceholder": "Это сообщение было удалено",
   "from": "От:",
   "to": "Кому:",
   "sent": "Отправлено",
@@ -123,18 +125,10 @@
   "sendMessage": "Отправить сообщение",
   "groupMembers": "Участники группы",
   "moreInformation": "Больше информации",
-  "resend": "Отправить ещё раз",
-  "deleteMessage": "Удалить сообщение",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Удалить сообщения",
-  "deleteMessageForEveryone": "Удалить сообщение для всех",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Удалить сообщения для всех",
-  "deleteForEveryone": "Удалить для всех",
+  "resend": "Отправить повторно",
   "deleteConversationConfirmation": "Удалить эту беседу без возможности восстановления?",
   "clearAllData": "Очистить все данные",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "Это навсегда удалит ваши сообщения и контакты.",
   "deleteContactConfirmation": "Вы уверены, что хотите удалить эту беседу?",
   "quoteThumbnailAlt": "Миниатюра изображения из цитируемого сообщения",
   "imageAttachmentAlt": "Изображение, прикрепленное к сообщению",
@@ -146,6 +140,7 @@
   "copySessionID": "Копировать Session ID",
   "copyOpenGroupURL": "Копировать URL группы",
   "save": "Сохранить",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Сохранено",
   "permissions": "Разрешения",
   "general": "Общие",
@@ -153,9 +148,9 @@
   "savedTheFile": "$name$ сохранил медиафайл",
   "linkPreviewsTitle": "Отправлять предпросмотр ссылки",
   "linkPreviewDescription": "Предпросмотр доступен для большинства URL",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Микрофон и камера",
-  "mediaPermissionsDescription": "Разрешить доступ к камере и микрофону",
+  "linkPreviewsConfirmMessage": "У вас не будет полной защиты метаданных при отправке предварительного просмотра ссылок.",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Проверка орфографии",
   "spellCheckDescription": "Включить проверку орфографии текста, введенного в поле создания сообщения",
   "spellCheckDirty": "Вы должны перезапустить Session, чтобы применить новые настройки",
@@ -258,7 +253,7 @@
   "userUnbanFailed": "Не удалось разблокировать!",
   "banUser": "Заблокировать пользователя",
   "banUserConfirm": "Вы уверены, что хотите заблокировать пользователя?",
-  "banUserAndDeleteAll": "Заблокировать и удалить всё",
+  "banUserAndDeleteAll": "Заблокировать и удалить все",
   "banUserAndDeleteAllConfirm": "Вы уверены, что хотите заблокировать пользователя и удалить все его сообщения?",
   "userBanned": "Пользователь заблокирован",
   "userBanFailed": "Не удалось заблокировать!",
@@ -288,7 +283,7 @@
   "confirmPassword": "Подтвердить пароль",
   "pasteLongPasswordToastTitle": "Содержимое буфера обмена превышает максимальную длину пароля в $max_pwd_len$ символов.",
   "showRecoveryPhrasePasswordRequest": "Пожалуйста, введите ваш пароль",
-  "recoveryPhraseSavePromptMain": "Ваша секретная фраза является главным ключом к вашему Session ID. Вы можете использовать ее для восстановления Session ID, если потеряете доступ к своему устройству. Сохраните свою секретную фразу в безопасном месте, и никому её не передавайте.",
+  "recoveryPhraseSavePromptMain": "Фраза восстановления является главным ключом к Session ID — вы можете использовать ее для восстановления, если потеряете доступ к своему устройству. Храните вашу фразу восстановления в надежном месте и никому ее не передавайте.",
   "invalidOpenGroupUrl": "Недействительный URL-адрес",
   "copiedToClipboard": "Скопировано в буфер обмена",
   "passwordViewTitle": "Введите ваш пароль",
@@ -304,11 +299,11 @@
   "noGivenPassword": "Пожалуйста, введите ваш пароль",
   "passwordsDoNotMatch": "Пароли не совпадают",
   "setPasswordInvalid": "Пароли не совпадают",
-  "changePasswordInvalid": "Старый введённый пароль неверен",
+  "changePasswordInvalid": "Старый пароль, который вы ввели, неверен",
   "removePasswordInvalid": "Неверный пароль",
   "setPasswordTitle": "Установить пароль",
-  "changePasswordTitle": "Изменённый пароль",
-  "removePasswordTitle": "Удалённый пароль",
+  "changePasswordTitle": "Пароль изменен",
+  "removePasswordTitle": "Пароль удален",
   "setPasswordToastDescription": "Ваш пароль установлен. Пожалуйста, храните его в безопасном месте.",
   "changePasswordToastDescription": "Ваш пароль был изменен. Пожалуйста, храните его в безопасном месте.",
   "removePasswordToastDescription": "Вы удалили ваш пароль.",
@@ -387,7 +382,7 @@
   "closedGroupMaxSize": "В закрытой группе не может быть больше 100 участников",
   "noBlockedContacts": "Нет заблокированных контактов",
   "userAddedToModerators": "Пользователь добавлен в список модераторов",
-  "userRemovedFromModerators": "Пользователь удалён из списка модераторов",
+  "userRemovedFromModerators": "Пользователь удален из списка модераторов",
   "orJoinOneOfThese": "Или присоединитесь к одной из этих...",
   "helpUsTranslateSession": "Помогите нам перевести Session",
   "translation": "Перевод",
@@ -421,6 +416,7 @@
   "unpinConversation": "Открепить беседу",
   "pinConversationLimitTitle": "Лимит закрепленных бесед",
   "pinConversationLimitToastDescription": "Вы можете закрепить только $number$ бесед",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "Первое непрочитанное сообщение находится выше",
   "sendRecoveryPhraseTitle": "Отправка секретной фразы",
   "sendRecoveryPhraseMessage": "Вы пытаетесь отправить вашу секретную фразу, которая может быть использована для доступа к вашей учетной записи. Вы уверены, что хотите отправить это сообщение?",
@@ -431,30 +427,40 @@
   "dialogClearAllDataDeletionQuestion": "Вы хотите очистить только это устройство или полностью удалить ваш аккаунт?",
   "deviceOnly": "Только устройство",
   "entireAccount": "Полностью аккаунт",
-  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "areYouSureDeleteDeviceOnly": "Вы уверены, что хотите удалить только данные вашего устройства?",
+  "areYouSureDeleteEntireAccount": "Вы уверены, что хотите удалить всю свою учетную запись, включая сетевые данные?",
+  "iAmSure": "Я уверен",
   "recoveryPhraseSecureTitle": "Вы почти закончили!",
   "recoveryPhraseRevealMessage": "Обезопасьте свой аккаунт, сохранив вашу секретную фразу. Посмотрите вашу секретную фразу, затем сохраните ее в безопасном месте.",
   "recoveryPhraseRevealButtonText": "Показать секретную фразу",
   "notificationSubtitle": "Уведомления - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "surveyTitle": "Пройдите наш опрос о Session",
+  "goToOurSurvey": "Перейти к опросу",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
+  "accept": "Принять",
+  "decline": "Отклонить",
+  "endCall": "Завершить вызов",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
+  "unableToCallTitle": "Не удается начать новый вызов",
+  "callMissed": "Пропущенный вызов от $name$",
+  "callMissedTitle": "Пропущен вызов",
+  "noCameraFound": "Камера не найдена",
+  "noAudioInputFound": "Аудиовход не найден",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
