--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Поновно повезивање за $reconnect_duration_in_seconds$ секунде/и",
   "submitDebugLog": "Извештај о грешкама",
   "debugLog": "Izveštaj o greškama",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Idite na napomene o verziji",
   "goToSupportPage": "Idite na stranicu za podršku",
   "menuReportIssue": "Prijavi problem",
@@ -109,13 +110,14 @@
   "continue": "Nastavi",
   "error": "Грешка",
   "delete": "Обриши",
-  "deletePublicWarning": "Jesi li siguran? Ovo će trajno ukloniti ovu poruku za sve u ovoj otvorenoj grupi.",
-  "deleteMultiplePublicWarning": "Jesi li siguran? Ovo će trajno ukloniti ovu poruku za sve u ovoj otvorenoj grupi.",
-  "deleteWarning": "Jesi li sigurni? Klikom na „obriši“ ovu poruku ćete trajno ukloniti samo sa ovog uređaja.",
-  "deleteMultipleWarning": "Jesi li sigurni? Klikom na „obriši“ ovu poruku ćete trajno ukloniti samo sa ovog uređaja.",
   "messageDeletionForbidden": "Nemate dozvolu da brišete tuđe poruke",
-  "deleteThisMessage": "Обриши ову поруку",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Уклони пошиљке",
   "deleted": "Obrisano",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Од",
   "to": "to",
   "sent": "Послата",
@@ -124,14 +126,6 @@
   "groupMembers": "Чланови групе",
   "moreInformation": "Više informacija",
   "resend": "Pošalji ponovo",
-  "deleteMessage": "Obriši poruku",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Уклони пошиљке",
-  "deleteMessageForEveryone": "Obriši poruku za sve",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Obriši poruku za sve",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Неопозиво уклонити преписку?",
   "clearAllData": "Počisti sve podatke",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Kreiraj Session ID",
   "copyOpenGroupURL": "Kopiraj URL-ove grupa",
   "save": "Сачувај",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Sačuvano",
   "permissions": "Dozvole",
   "general": "Опште",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Pošalji preglede veza",
   "linkPreviewDescription": "Pregledi su podržani za većinu URL-ova",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Mikrofon i kamera",
-  "mediaPermissionsDescription": "Dozvoli pristup kameri i mikrofonu",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Provеra pravopisa",
   "spellCheckDescription": "Omogući proveru pravopisa teksta",
   "spellCheckDirty": "Neophodno je da ponovo pokrenute sesiju da biste primenili nova podešavanja",
@@ -421,6 +416,7 @@
   "unpinConversation": "Otkači konverzaciju sa vrha",
   "pinConversationLimitTitle": "Limit zalepljenih konverzacija",
   "pinConversationLimitToastDescription": "Možete zalepiti najviše $number$ konverzacija",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "Prva nepročitana poruka je gore",
   "sendRecoveryPhraseTitle": "Slanje fraze za oporavak",
   "sendRecoveryPhraseMessage": "Pokušavate da pošaljete svoju frazu za oporavak koja se može koristiti za pristup vašem nalogu. Jeste li sigurni da želite poslati ovu poruku?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Zaštitite svoj nalog tako što ćete sačuvati frazu za oporavak. Pogledajte svoju frazu za oporavak, a zatim je bezbedno sačuvajte.",
   "recoveryPhraseRevealButtonText": "Slanje fraze za oporavak",
   "notificationSubtitle": "Notifikacije - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
