--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -1,7 +1,7 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
+  "privacyPolicy": "Şartlar ve Gizlilik Politikası",
   "copyErrorAndQuit": "Hatayı kopyala ve çık",
-  "unknown": "Unknown",
+  "unknown": "Bilinmeyen",
   "databaseError": "Veritabanı hatası",
   "mainMenuFile": "&Dosya",
   "mainMenuEdit": "&Düzenle",
@@ -29,26 +29,26 @@
   "viewMenuZoomOut": "Uzaklaştır",
   "viewMenuToggleFullScreen": "Tam Ekranı Aç/Kapat",
   "viewMenuToggleDevTools": "Geliştirici Araçlarını Aç/Kapat",
-  "contextMenuNoSuggestions": "No Suggestions",
-  "openGroupInvitation": "Open group invitation",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "contextMenuNoSuggestions": "Öneri Yok",
+  "openGroupInvitation": "Açık grup daveti",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$'e katıl?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "$roomName$ açık gurubuna katılmak istediğinize emin misiniz?",
+  "enterSessionIDOrONSName": "Session Kimliğini veya ONS adını girin",
   "loading": "Yükleniyor...",
   "optimizingApplication": "Uygulama optimize ediliyor...",
-  "done": "Done",
+  "done": "Tamamlandı",
   "me": "Ben",
   "view": "Görüntüle",
   "youLeftTheGroup": "Gruptan ayrıldınız",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "youGotKickedFromGroup": "Gruptan atıldınız.",
+  "unreadMessage": "Okunmamış İletiler",
+  "unreadMessages": "Okunmamış İleti",
   "debugLogExplanation": "Bu günlük katkıda bulunanların görebilmeleri için herkese açık bir şekilde gönderilecektir. Göndermeden önce inceleyip düzenleyebilirsiniz.",
   "debugLogError": "Yüklemede bir şeyler ters gitti! Lütfen günlüğü hazırlayacağınız hata kaydına kendiniz ekleyin.",
   "reportIssue": "Sorun bildir",
   "gotIt": "Anladım!",
   "submit": "Gönder",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "Tümünü Okundu Olarak İşaretle",
   "incomingError": "Gelen ileti işlenirken hata oluştu",
   "media": "Medya",
   "mediaEmptyState": "Bu sohbette hiç medya yok",
@@ -73,10 +73,11 @@
   "attemptingReconnection": "Yeniden bağlantı kurma $reconnect_duration_in_seconds$ saniye içerisinde tekrar denenecektir.",
   "submitDebugLog": "Hata ayıklama günlüğü",
   "debugLog": "Hata Ayıklama Günlüğü",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Sürüm Notlarına Git",
   "goToSupportPage": "Destek Sayfasına Git",
   "menuReportIssue": "Sorun Bildir",
-  "about": "About",
+  "about": "Hakkında",
   "speech": "Konuşma",
   "show": "Göster",
   "sessionMessenger": "oturum",
@@ -90,7 +91,7 @@
   "contactAvatarAlt": "$name$ kişisinin avatarı",
   "downloadAttachment": "Eklentiyi İndir",
   "replyToMessage": "İletiyi Yanıtla",
-  "replyingToMessage": "Replying to:",
+  "replyingToMessage": "Adlı kişiye yanıt olarak:",
   "originalMessageNotFound": "İletinin aslı bulunamadı",
   "originalMessageNotAvailable": "İletinin aslı artık mevcut değil",
   "messageFoundButNotLoaded": "İletinin aslı bulundu, ama yüklenmedi. Yüklemek için yukarıya kaydırın.",
@@ -101,37 +102,30 @@
   "audio": "Ses",
   "video": "Video",
   "photo": "Fotoğraf",
-  "cannotUpdate": "Cannot Update",
+  "cannotUpdate": "Güncellenemiyor",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
   "ok": "TAMAM",
   "cancel": "İptal",
-  "close": "Close",
+  "close": "Kapat",
   "continue": "Devam Et",
   "error": "Hata",
   "delete": "Sil",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "Emin misiniz? 'Sil'e tıklamak bu iletiyi sadece bu cihazdan kalıcı olarak silecektir.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteThisMessage": "Bu iletiyi sil",
-  "deleted": "Deleted",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "İletileri sil",
+  "deleted": "Silindi",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Gönderen",
   "to": "alıcı",
   "sent": "Gönderildi",
   "received": "Alındı",
   "sendMessage": "İleti gönder",
   "groupMembers": "Grup üyeleri",
-  "moreInformation": "More information",
-  "resend": "Resend",
-  "deleteMessage": "İletiyi Sil",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "İletileri sil",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete For Everyone",
+  "moreInformation": "Daha fazla bilgi",
+  "resend": "Tekrar gönder",
   "deleteConversationConfirmation": "Bu sohbeti kalıcı olarak sil?",
   "clearAllData": "Clear All Data",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -142,10 +136,11 @@
   "lightboxImageAlt": "Konuşmada gönderilen görüntü",
   "imageCaptionIconAlt": "Bu görüntünün başlığı olduğunu gösteren ikon",
   "addACaption": "Bir başlık ekleyin...",
-  "copy": "Copy",
-  "copySessionID": "Copy Session ID",
+  "copy": "Kopyala",
+  "copySessionID": "Session Kimliğini Kopyala",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Kaydet",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
   "permissions": "İzinler",
   "general": "Genel",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
-  "mediaPermissionsDescription": "Kamera ve mikrofona erişim izni ver",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "İleti kutusuna girilen sözcüklerin denetlenmesini etkinleştir",
   "spellCheckDirty": "You must restart Session to apply your new settings",
@@ -247,15 +242,15 @@
   "multipleJoinedTheGroup": "$names$ gruba katıldı",
   "kickedFromTheGroup": "$name$ was removed from the group.",
   "multipleKickedFromTheGroup": "$name$ were removed from the group.",
-  "blockUser": "Block",
-  "unblockUser": "Unblock",
-  "unblocked": "Unblocked",
-  "blocked": "Blocked",
-  "blockedSettingsTitle": "Blocked contacts",
-  "unbanUser": "Unban User",
+  "blockUser": "Engelle",
+  "unblockUser": "Engeli Kaldır",
+  "unblocked": "Engel kaldırıldı",
+  "blocked": "Engellendi",
+  "blockedSettingsTitle": "Engellenmiş kişiler",
+  "unbanUser": "Kullanıcı Engelini Kaldır",
   "unbanUserConfirm": "Are you sure you want to unban user?",
-  "userUnbanned": "User unbanned successfully",
-  "userUnbanFailed": "Unban failed!",
+  "userUnbanned": "Kullanıcının engeli başarıyla kaldırıldı",
+  "userUnbanFailed": "Engelini kaldırma başarısız!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Ban and Delete All",
@@ -268,29 +263,29 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "noContactsForGroup": "You don't have any contacts yet",
-  "failedToAddAsModerator": "Failed to add user as moderator",
+  "noContactsForGroup": "Henüz herhangi bir kişi yok",
+  "failedToAddAsModerator": "Kullanıcı moderatör olarak eklenemedi",
   "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
-  "editGroup": "Edit group",
-  "editGroupName": "Edit group name",
-  "updateGroupDialogTitle": "Updating $name$...",
-  "showRecoveryPhrase": "Recovery Phrase",
-  "yourSessionID": "Your Session ID",
-  "setAccountPasswordTitle": "Set Account Password",
-  "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
-  "changeAccountPasswordTitle": "Change Account Password",
-  "changeAccountPasswordDescription": "Change your password",
-  "removeAccountPasswordTitle": "Remove Account Password",
+  "editGroup": "Grubu düzenle",
+  "editGroupName": "Grup adını düzenle",
+  "updateGroupDialogTitle": "$name$ güncelleniyor...",
+  "showRecoveryPhrase": "Kurtarma Sözcük Grubu",
+  "yourSessionID": "Session Kimliğiniz",
+  "setAccountPasswordTitle": "Hesap Şifresini Belirleyin",
+  "setAccountPasswordDescription": "Session ekranının kilidini açmak için parola iste. Ekran Kilidi etkinken mesaj bildirimleri almaya devam edebilirsiniz. Session’ın bildirim ayarları, görüntülenen bilgileri özelleştirmenize izin verir",
+  "changeAccountPasswordTitle": "Hesap Şifresini Değiştir",
+  "changeAccountPasswordDescription": "Şifrenizi değiştirin",
+  "removeAccountPasswordTitle": "Hesap Şifresini Kaldır",
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
-  "confirmPassword": "Confirm password",
+  "confirmPassword": "Şifreyi Doğrula",
   "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
-  "invalidOpenGroupUrl": "Invalid URL",
-  "copiedToClipboard": "Copied to clipboard",
+  "invalidOpenGroupUrl": "Geçersiz URL",
+  "copiedToClipboard": "Panoya kopyalandı",
   "passwordViewTitle": "Type In Your Password",
   "unlock": "Unlock",
   "password": "Password",
@@ -314,7 +309,7 @@
   "removePasswordToastDescription": "You have removed your password.",
   "publicChatExists": "You are already connected to this open group",
   "connectToServerFail": "Couldn't join group",
-  "connectingToServer": "Connecting...",
+  "connectingToServer": "Bağlanılıyor...",
   "connectToServerSuccess": "Successfully connected to open group",
   "setPasswordFail": "Failed to set password",
   "passwordLengthError": "Password must be between 6 and 64 characters long",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
