--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -1,7 +1,7 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
+  "privacyPolicy": "Умови та Політика конфіденційності",
   "copyErrorAndQuit": "Скопіювати помилку та вийти",
-  "unknown": "Unknown",
+  "unknown": "Невідомо",
   "databaseError": "Помилка бази даних",
   "mainMenuFile": "&Файл",
   "mainMenuEdit": "&Редагування",
@@ -17,52 +17,52 @@
   "editMenuCut": "Вирізати",
   "editMenuCopy": "Копіювати",
   "editMenuPaste": "Вставити",
-  "editMenuPasteAndMatchStyle": "Paste and Match Style",
+  "editMenuPasteAndMatchStyle": "Вставити в поточному стилі",
   "editMenuDelete": "Видалити",
   "editMenuSelectAll": "Вибрати все",
   "windowMenuClose": "Закрити вікно",
   "windowMenuMinimize": "Згорнути в трей",
   "windowMenuZoom": "Збільшити",
-  "windowMenuBringAllToFront": "Bring All to Front",
+  "windowMenuBringAllToFront": "Вивести все на передній план",
   "viewMenuResetZoom": "Актуальний розмір",
   "viewMenuZoomIn": "Збільшити",
   "viewMenuZoomOut": "Зменшити",
   "viewMenuToggleFullScreen": "Відкрити на повний екран",
   "viewMenuToggleDevTools": "Відкрити засоби розробника",
-  "contextMenuNoSuggestions": "No Suggestions",
-  "openGroupInvitation": "Open group invitation",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "contextMenuNoSuggestions": "Немає припущень",
+  "openGroupInvitation": "Відкрити запрошення до групи",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Приєднатись до $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Ви впевнені, що хочете приєднатись до відкритої групи $roomName$?",
+  "enterSessionIDOrONSName": "Введіть ID сесії або ім'я ONS",
   "loading": "Оновлення…",
   "optimizingApplication": "Оптимізація програми...",
-  "done": "Done",
+  "done": "Готово",
   "me": "Я",
   "view": "Детальніше",
   "youLeftTheGroup": "Ви покинули групу",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "youGotKickedFromGroup": "Вас вилучили із групи.",
+  "unreadMessage": "Непрочитане повідомлення",
+  "unreadMessages": "Непрочитані повідомлення",
   "debugLogExplanation": "Цей журнал буде доступний для розробників. Ви можете перевірити його перед відправкою.",
   "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "Повідомити про ваду",
   "gotIt": "Зрозуміло!",
   "submit": "Надіслати",
-  "markAllAsRead": "Mark All as Read",
-  "incomingError": "Error handling incoming message",
-  "media": "Media",
+  "markAllAsRead": "Відмітити все як прочитане",
+  "incomingError": "Помилка обробки вхідного повідомлення",
+  "media": "Медіа",
   "mediaEmptyState": "You don’t have any media in this conversation",
-  "documents": "Documents",
+  "documents": "Документи",
   "documentsEmptyState": "You don’t have any documents in this conversation",
-  "today": "Today",
+  "today": "Сьогодні",
   "yesterday": "Учора",
   "thisWeek": "This Week",
   "thisMonth": "Цей місяць",
   "voiceMessage": "Голосове повідомлення",
   "dangerousFileType": "Attachment type not allowed for security reasons",
-  "stagedPreviewThumbnail": "Draft thumbnail link preview for $domain$",
-  "previewThumbnail": "Thumbnail link preview for $domain$",
-  "stagedImageAttachment": "Draft image attachment: $path$",
+  "stagedPreviewThumbnail": "Попередній перегляд ескізу посилання для $domain$",
+  "previewThumbnail": "Попередній перегляд посилання для $domain$",
+  "stagedImageAttachment": "Ескіз прикріпленого зображення: $path$",
   "oneNonImageAtATimeToast": "When including a non-image attachment, the limit is one attachment per message.",
   "cannotMixImageAndNonImageAttachments": "You cannot mix non-image and image attachments in one message.",
   "maximumAttachments": "You cannot add any more attachments to this message.",
@@ -73,49 +73,51 @@
   "attemptingReconnection": "Спроба перепідключення через $reconnect_duration_in_seconds$ секунд",
   "submitDebugLog": "Debug log",
   "debugLog": "Журнал відладки",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Go to Release Notes",
-  "goToSupportPage": "Go to Support Page",
-  "menuReportIssue": "Report an Issue",
+  "goToSupportPage": "Перейти на сторінку підтримки",
+  "menuReportIssue": "Повідомити про помилку",
   "about": "About",
   "speech": "Розмова",
   "show": "Показати",
-  "sessionMessenger": "Session",
+  "sessionMessenger": "Сесія",
   "search": "Пошук",
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "Розмови",
   "contactsHeader": "Контакти",
   "messagesHeader": "Повідомлення",
-  "settingsHeader": "Settings",
-  "typingAlt": "Typing animation for this conversation",
-  "contactAvatarAlt": "Avatar for contact $name$",
-  "downloadAttachment": "Download Attachment",
+  "settingsHeader": "Налаштування",
+  "typingAlt": "Анімація набору тексту для цієї розмови",
+  "contactAvatarAlt": "Аватар для контакту $name$",
+  "downloadAttachment": "Завантажити прикріплення",
   "replyToMessage": "Reply to Message",
-  "replyingToMessage": "Replying to:",
-  "originalMessageNotFound": "Original message not found",
-  "originalMessageNotAvailable": "Original message no longer available",
-  "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
-  "recording": "Recording",
-  "you": "You",
+  "replyingToMessage": "Відповідь на:",
+  "originalMessageNotFound": "Оригінальне повідомлення не знайдено",
+  "originalMessageNotAvailable": "Оригінальне повідомлення більше не доступне",
+  "messageFoundButNotLoaded": "Оригінальне повідомлення знайдено, але не завантажено. Прокрутіть вгору, щоб завантажити його.",
+  "recording": "Запис",
+  "you": "Ви",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "To send audio messages, allow Session Desktop to access your microphone.",
   "audio": "Аудіо",
-  "video": "Video",
-  "photo": "Photo",
-  "cannotUpdate": "Cannot Update",
+  "video": "Відео",
+  "photo": "Фото",
+  "cannotUpdate": "Неможливо оновити",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
   "ok": "Добре",
   "cancel": "Відмінити",
-  "close": "Close",
-  "continue": "Continue",
+  "close": "Закрити",
+  "continue": "Продовжити",
   "error": "Помилка",
   "delete": "Видалити",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "Are you sure? Clicking 'delete' will permanently remove this message from this device only.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteThisMessage": "Видалити це повідомлення",
-  "deleted": "Deleted",
+  "messageDeletionForbidden": "У вас немає дозволу на видалення повідомлень інших",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Видалити повідомлення",
+  "deleted": "Видалено",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Від",
   "to": "to",
   "sent": "Надіслано",
@@ -123,18 +125,10 @@
   "sendMessage": "Надіслати повідомлення",
   "groupMembers": "Члени групи",
   "moreInformation": "More information",
-  "resend": "Resend",
-  "deleteMessage": "Видалити повідомлення",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Видалити повідомлення",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete For Everyone",
+  "resend": "Надіслати повторно",
   "deleteConversationConfirmation": "Видалити цю розмову без можливості відновлення?",
-  "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "clearAllData": "Очистити всі дані",
+  "deleteAccountWarning": "Це назавжди видалить повідомлення та контакти.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "imageAttachmentAlt": "Image attached to message",
@@ -142,10 +136,11 @@
   "lightboxImageAlt": "Image sent in conversation",
   "imageCaptionIconAlt": "Icon showing that this image has a caption",
   "addACaption": "Add a caption...",
-  "copy": "Copy",
+  "copy": "Копіювати",
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Зберегти",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
   "permissions": "Permissions",
   "general": "Загальні",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
-  "mediaPermissionsDescription": "Allow access to camera and microphone",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Enable spell check of text entered in message composition box",
   "spellCheckDirty": "You must restart Session to apply your new settings",
@@ -194,18 +189,18 @@
   "timerOption_10_seconds": "10 секунд",
   "timerOption_30_seconds": "30 секунд",
   "timerOption_1_minute": "1 хвилина",
-  "timerOption_5_minutes": "5 minutes",
-  "timerOption_30_minutes": "30 minutes",
+  "timerOption_5_minutes": "5 хвилин",
+  "timerOption_30_minutes": "30 хвилин",
   "timerOption_1_hour": "1 година",
-  "timerOption_6_hours": "6 hours",
-  "timerOption_12_hours": "12 hours",
+  "timerOption_6_hours": "6 годин",
+  "timerOption_12_hours": "12 годин",
   "timerOption_1_day": "1 день",
   "timerOption_1_week": "1 тиждень",
   "disappearingMessages": "Зникаючі повідомлення ",
-  "changeNickname": "Change Nickname",
+  "changeNickname": "Змінити нікнейм",
   "clearNickname": "Clear nickname",
-  "nicknamePlaceholder": "New Nickname",
-  "changeNicknameMessage": "Enter a nickname for this user",
+  "nicknamePlaceholder": "Новий нікнейм",
+  "changeNicknameMessage": "Введіть нікнейм для цього користувача",
   "timerOption_0_seconds_abbreviated": "вимкн",
   "timerOption_5_seconds_abbreviated": "5с",
   "timerOption_10_seconds_abbreviated": "10с",
@@ -222,7 +217,7 @@
   "disabledDisappearingMessages": "$name$ disabled disappearing messages",
   "youDisabledDisappearingMessages": "You disabled disappearing messages",
   "timerSetTo": "Таймер встановленно на $time$",
-  "noteToSelf": "Note to Self",
+  "noteToSelf": "Замітка для себе",
   "hideMenuBarTitle": "Hide Menu Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Почати нову розмову…",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
