--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -42,7 +42,7 @@
   "youLeftTheGroup": "你已经离开了群组",
   "youGotKickedFromGroup": "您已被移出群组。",
   "unreadMessage": "未读消息",
-  "unreadMessages": "Unread Messages",
+  "unreadMessages": "未读消息",
   "debugLogExplanation": "该日志将公开发布以供参考，您可以在提交之前检查和编辑。",
   "debugLogError": "上传出错！您可以手动将日志添加到要反馈的bug中。",
   "reportIssue": "反馈错误信息",
@@ -73,6 +73,7 @@
   "attemptingReconnection": "在 $reconnect_duration_in_seconds$ 秒后尝试重新连接",
   "submitDebugLog": "调试日志",
   "debugLog": "调试日志",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "前往发布说明",
   "goToSupportPage": "前往支持页面",
   "menuReportIssue": "反馈问题",
@@ -109,13 +110,14 @@
   "continue": "继续",
   "error": "错误",
   "delete": "删除",
-  "deletePublicWarning": "您确定吗，对此公开群组中的每个人永久性删除本消息？",
-  "deleteMultiplePublicWarning": "您确定吗，对此公开群组中的每个人永久性删除这些消息？",
-  "deleteWarning": "点击“删除”将从本设备彻底删除此信息，您确定要删除吗？",
-  "deleteMultipleWarning": "您确定吗？点击“删除”将仅从此设备永久删除这些消息。",
   "messageDeletionForbidden": "您无权删除他人的对话消息",
-  "deleteThisMessage": "删除这条消息。",
+  "deleteJustForMe": "仅在我的设备上删除",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "删除消息",
   "deleted": "已删除",
+  "messageDeletedPlaceholder": "该消息已被删除",
   "from": "来自",
   "to": "向",
   "sent": "已发送",
@@ -124,17 +126,9 @@
   "groupMembers": "群组成员",
   "moreInformation": "更多信息",
   "resend": "重发",
-  "deleteMessage": "删除消息",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "删除消息",
-  "deleteMessageForEveryone": "对所有人删除消息",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "对所有人删除消息",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "永久删除此会话？",
   "clearAllData": "清除所有数据",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "这将永久删除您的消息和联系人",
   "deleteContactConfirmation": "您确定要删除此对话吗？",
   "quoteThumbnailAlt": "引用消息图片的缩略图",
   "imageAttachmentAlt": "消息图片",
@@ -146,6 +140,7 @@
   "copySessionID": "复制 Session ID",
   "copyOpenGroupURL": "复制群组链接",
   "save": "保存",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "已保存",
   "permissions": "权限",
   "general": "通用",
@@ -153,9 +148,9 @@
   "savedTheFile": "$name$ 保存了媒体内容。",
   "linkPreviewsTitle": "发送链接预览",
   "linkPreviewDescription": "多数链接都支持预览",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "麦克风和摄像头",
-  "mediaPermissionsDescription": "允许访问摄像头和麦克风",
+  "linkPreviewsConfirmMessage": "您无法在绝对的数据安全保障前提下发送链接预览。",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "拼写检查",
   "spellCheckDescription": "启用输入框拼写检查",
   "spellCheckDirty": "您必须重新启动Session才能应用您的新设置",
@@ -258,8 +253,8 @@
   "userUnbanFailed": "解封失败！",
   "banUser": "封禁用户",
   "banUserConfirm": "Are you sure you want to ban user?",
-  "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
+  "banUserAndDeleteAll": "屏蔽并全部删除",
+  "banUserAndDeleteAllConfirm": "您确定要屏蔽联系人并删除他的所有消息吗？",
   "userBanned": "User banned successfully",
   "userBanFailed": "封禁失败！",
   "leaveGroup": "离开群聊",
@@ -340,8 +335,8 @@
   "onlyAdminCanRemoveMembersDesc": "只有群组的创建者可以移除用户",
   "createAccount": "Create Account",
   "signIn": "登录",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "从托盘中启动",
+  "startInTrayDescription": "将 Session 启动为最小化应用程序 ",
   "yourUniqueSessionID": "向您的Session ID打个招呼吧",
   "allUsersAreRandomly...": "您的Session ID是其他用户在与您聊天时使用的独一无二的地址。Session ID与您的真实身份无关，它在设计上完全是匿名且私密的。",
   "getStarted": "开始使用",
@@ -361,7 +356,7 @@
   "beginYourSession": "开始<您的会话。",
   "welcomeToYourSession": "欢迎来到 Session 。",
   "newSession": "新建私人聊天",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "搜索对话内容或联系人",
   "enterSessionID": "输入Session ID",
   "enterSessionIDOfRecipient": "输入对方的Session ID 或者 ONS 名称",
   "usersCanShareTheir...": "用户可以通过进入帐号设置并点击\"共享Session ID\"来分享自己的Session ID，或通过共享其二维码来分享其Session ID。",
@@ -417,44 +412,55 @@
   "clickToTrustContact": "点击下载文件",
   "trustThisContactDialogTitle": "是否信任 $name$?",
   "trustThisContactDialogDescription": "您确定要下载$name$发送的媒体消息吗?",
-  "pinConversation": "Pin Conversation",
-  "unpinConversation": "Unpin Conversation",
-  "pinConversationLimitTitle": "Pinned conversations limit",
-  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
-  "latestUnreadIsAbove": "First unread message is above",
-  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
-  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
-  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
-  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "pinConversation": "置顶对话",
+  "unpinConversation": "取消置顶对话",
+  "pinConversationLimitTitle": "置顶对话上限",
+  "pinConversationLimitToastDescription": "你只能置顶 $number$ 个聊天",
+  "showUserDetails": "Show User Details",
+  "latestUnreadIsAbove": "第一条未读消息在上方",
+  "sendRecoveryPhraseTitle": "正在发送恢复口令",
+  "sendRecoveryPhraseMessage": "您正在尝试发送恢复口令，它能用来登录和访问您的账号。\n您确定要发送该消息吗？",
+  "dialogClearAllDataDeletionFailedTitle": "未删除数据",
+  "dialogClearAllDataDeletionFailedDesc": "出现未知错误，数据删除失败。您想要仅在此设备中删除数据吗？",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "您想要仅在此设备中删除数据吗？",
+  "dialogClearAllDataDeletionFailedMultiple": "数据删除失败。节点错误： $snodes$",
+  "dialogClearAllDataDeletionQuestion": "您想仅清空此设备，还是删除整个账号？",
   "deviceOnly": "仅设备",
-  "entireAccount": "Entire Account",
-  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
-  "recoveryPhraseSecureTitle": "You're almost finished!",
-  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
-  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "entireAccount": "整个账号",
+  "areYouSureDeleteDeviceOnly": "是否仅删除这台设备的数据？",
+  "areYouSureDeleteEntireAccount": "是否仅删除您的整个账号，包括网络数据？",
+  "iAmSure": "确认",
+  "recoveryPhraseSecureTitle": "就快要完成了！",
+  "recoveryPhraseRevealMessage": "通过发送恢复口令，保障您账号安全。展示恢复口令，并将其储存到安全的地方。",
+  "recoveryPhraseRevealButtonText": "展示恢复口令",
+  "notificationSubtitle": "通知设置 - $setting$",
+  "surveyTitle": "参加我们的产品问卷调研",
+  "goToOurSurvey": "跳转至问卷",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
+  "accept": "接受",
+  "decline": "拒绝",
+  "endCall": "结束呼叫",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
+  "unableToCallTitle": "无法开始新通话",
+  "callMissed": "来自 $name$ 的未接来电",
+  "callMissedTitle": "未接来电",
+  "noCameraFound": "找不到摄像头",
+  "noAudioInputFound": "找不到音频输入",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
