--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -30,25 +30,25 @@
   "viewMenuToggleFullScreen": "切換全螢幕",
   "viewMenuToggleDevTools": "切換開發者工具",
   "contextMenuNoSuggestions": "沒有建議",
-  "openGroupInvitation": "Open group invitation",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "openGroupInvitation": "打開群組邀請",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "加入 $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "您確定要加入 $roomName$ 公開群組嗎？",
+  "enterSessionIDOrONSName": "請輸入您的 ID 或 ONS 的名稱",
   "loading": "載入中...",
   "optimizingApplication": "正在最佳化應用程式...",
-  "done": "Done",
+  "done": "完成",
   "me": "我",
   "view": "檢視",
   "youLeftTheGroup": "你已離開此群組",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "youGotKickedFromGroup": "您已從群組中移除",
+  "unreadMessage": "未讀訊息",
+  "unreadMessages": "未讀訊息",
   "debugLogExplanation": "這個紀錄將被公開張貼在線上給貢獻者瀏覽。在送出前，你可以檢視及修改。",
   "debugLogError": "上傳出問題目! 請考慮手動加入活動記錄檔來查錯",
   "reportIssue": "回報問題",
   "gotIt": "了解！",
   "submit": "送出",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "全部標記為已讀",
   "incomingError": "在處理來訊時出現錯誤",
   "media": "媒體",
   "mediaEmptyState": "您在本次對話中無任何媒體檔案",
@@ -73,10 +73,11 @@
   "attemptingReconnection": "嘗試在 $reconnect_duration_in_seconds$ 秒內重新連線",
   "submitDebugLog": "除錯紀錄",
   "debugLog": "除錯日誌",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "前往發行紀錄",
   "goToSupportPage": "前往支援頁面",
   "menuReportIssue": "回報問題",
-  "about": "About",
+  "about": "關於",
   "speech": "語音",
   "show": "顯示",
   "sessionMessenger": "Session",
@@ -85,86 +86,80 @@
   "conversationsHeader": "對話",
   "contactsHeader": "聯絡人",
   "messagesHeader": "訊息",
-  "settingsHeader": "Settings",
+  "settingsHeader": "設定",
   "typingAlt": "本次對話中輸入動畫",
   "contactAvatarAlt": "聯絡人 $name$ 頭像圖示",
   "downloadAttachment": "下載附件",
   "replyToMessage": "回覆訊息",
-  "replyingToMessage": "Replying to:",
+  "replyingToMessage": "回復：",
   "originalMessageNotFound": "找不到原始訊息",
   "originalMessageNotAvailable": "原始訊息無法再取得",
   "messageFoundButNotLoaded": "找到了原始訊息，但未載入，向上滑動以進行載入。",
-  "recording": "Recording",
+  "recording": "錄製中",
   "you": "你",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "要傳送語音訊息，須授權 Siganl 桌面版可以使用您設備的麥克風。 ",
   "audio": "聲音",
   "video": "影片",
   "photo": "照片",
-  "cannotUpdate": "Cannot Update",
-  "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
+  "cannotUpdate": "無法更新",
+  "cannotUpdateDetail": "Session更新失敗，但仍有其他適用的新版本。請到https://getsession.org/上手動下載，然後聯繫客服支持或提交出錯版本歸檔。",
   "ok": "好",
   "cancel": "取消",
-  "close": "Close",
-  "continue": "Continue",
+  "close": "關閉",
+  "continue": "繼續",
   "error": "錯誤",
   "delete": "刪除",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "您確定嗎？點擊「刪除」只會自本台設備上永久地移除此訊息。",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteThisMessage": "刪除這則訊息",
-  "deleted": "Deleted",
+  "messageDeletionForbidden": "您無權刪除他人訊息",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "刪除訊息",
+  "deleted": "已刪除",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "來自",
   "to": "至",
   "sent": "已送出",
   "received": "已接收",
   "sendMessage": "送出一則訊息",
   "groupMembers": "群組成員",
-  "moreInformation": "More information",
-  "resend": "Resend",
-  "deleteMessage": "刪除訊息",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "刪除訊息",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete For Everyone",
+  "moreInformation": "更多信息",
+  "resend": "重傳",
   "deleteConversationConfirmation": "永久刪除對話？",
-  "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
-  "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
+  "clearAllData": "清除所有資料",
+  "deleteAccountWarning": "這樣做將永久清除您的訊息與聯絡人。",
+  "deleteContactConfirmation": "確定刪除此會話？",
   "quoteThumbnailAlt": "引用訊息的縮圖",
   "imageAttachmentAlt": "訊息裏插入的圖片",
   "videoAttachmentAlt": "伴隨訊息的影片截圖",
   "lightboxImageAlt": "會話中送出的圖片",
   "imageCaptionIconAlt": "圖標顯示此圖像有說明文字",
   "addACaption": "加入一個標題...",
-  "copy": "Copy",
-  "copySessionID": "Copy Session ID",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "copy": "複製",
+  "copySessionID": "複製Session ID",
+  "copyOpenGroupURL": "複製群組 URL",
   "save": "儲存",
-  "saved": "Saved",
+  "saveLogToDesktop": "Save log to desktop",
+  "saved": "已儲存",
   "permissions": "許可",
   "general": "一般",
-  "tookAScreenshot": "$name$ took a screenshot",
-  "savedTheFile": "Media saved by $name$",
-  "linkPreviewsTitle": "Send Link Previews",
-  "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
-  "mediaPermissionsDescription": "授權軟體可以使用相機與麥克風功能",
-  "spellCheckTitle": "Spell Check",
+  "tookAScreenshot": "$name$ 擷取了螢幕畫面",
+  "savedTheFile": "$name$ 儲存了媒體",
+  "linkPreviewsTitle": "傳送連結預覽",
+  "linkPreviewDescription": "大部分網址都支援預覽功能",
+  "linkPreviewsConfirmMessage": "您在傳送連結預覽時無法得到完整的元數據保護。",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
+  "spellCheckTitle": "拼寫檢查",
   "spellCheckDescription": "在訊息撰寫時啟用文字輸入的拼字檢查",
-  "spellCheckDirty": "You must restart Session to apply your new settings",
+  "spellCheckDirty": "您必須重新啓動 Session 以應用您的新設定",
   "notifications": "通知",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
-  "readReceiptSettingTitle": "Read Receipts",
+  "readReceiptSettingTitle": "已讀回條",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
-  "typingIndicatorsSettingTitle": "Typing Indicators",
-  "zoomFactorSettingTitle": "Zoom Factor",
+  "typingIndicatorsSettingTitle": "輸入狀態",
+  "zoomFactorSettingTitle": "縮放係數",
   "notificationSettingsDialog": "當訊息抵達時，通知會顯示：",
   "disableNotifications": "關閉通知",
   "nameAndMessage": "傳送者與訊息",
@@ -183,7 +178,7 @@
   "timestamp_m": "1 分鐘",
   "timestamp_h": "1 小時",
   "timestampFormat_M": "MMM D",
-  "messageBodyMissing": "Please enter a message body.",
+  "messageBodyMissing": "請輸入訊息內容。",
   "unblockToSend": "解鎖聯絡人來傳送訊息。",
   "unblockGroupToSend": "解除此群組封鎖以傳送訊息。",
   "youChangedTheTimer": "您設定訊息讀後焚毀的時間為 $time$",
@@ -202,10 +197,10 @@
   "timerOption_1_day": "1 天",
   "timerOption_1_week": "1 週",
   "disappearingMessages": "自動銷毀訊息",
-  "changeNickname": "Change Nickname",
+  "changeNickname": "變更暱稱",
   "clearNickname": "Clear nickname",
-  "nicknamePlaceholder": "New Nickname",
-  "changeNicknameMessage": "Enter a nickname for this user",
+  "nicknamePlaceholder": "新暱稱",
+  "changeNicknameMessage": "爲該用戶鍵入昵稱",
   "timerOption_0_seconds_abbreviated": "關閉",
   "timerOption_5_seconds_abbreviated": "5 秒",
   "timerOption_10_seconds_abbreviated": "10 秒",
@@ -223,77 +218,77 @@
   "youDisabledDisappearingMessages": "您關閉了訊息讀後焚毀功能",
   "timerSetTo": "計時器設定為 $time$",
   "noteToSelf": "給自己的筆記",
-  "hideMenuBarTitle": "Hide Menu Bar",
-  "hideMenuBarDescription": "Toggle system menu bar visibility",
+  "hideMenuBarTitle": "隱藏選單列",
+  "hideMenuBarDescription": "切換系統選單列可見性",
   "startConversation": "開始新的對話...",
   "invalidNumberError": "無效號碼",
-  "failedResolveOns": "Failed to resolve ONS name",
-  "successUnlinked": "Your device was unlinked successfully",
-  "autoUpdateSettingTitle": "Auto Update",
+  "failedResolveOns": "無法解析 ONS 名稱",
+  "successUnlinked": "成功解除連結您的裝置",
+  "autoUpdateSettingTitle": "自動更新",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Session 可用的更新",
   "autoUpdateNewVersionMessage": "這是新版本的 Session",
   "autoUpdateNewVersionInstructions": "點選重啟 Session 來套用更新。",
   "autoUpdateRestartButtonLabel": "重啟 Session",
   "autoUpdateLaterButtonLabel": "稍後",
-  "autoUpdateDownloadButtonLabel": "Download",
+  "autoUpdateDownloadButtonLabel": "下載",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
-  "autoUpdateDownloadInstructions": "Would you like to download the update?",
+  "autoUpdateDownloadInstructions": "您要下載更新嗎？",
   "leftTheGroup": "$name$ 離開此群組",
   "multipleLeftTheGroup": "$name$ 離開此群組",
   "updatedTheGroup": "群組昇級",
   "titleIsNow": "標題現為 '$name$'",
   "joinedTheGroup": "$name$ 已加入小組",
   "multipleJoinedTheGroup": "$names$ 已加入群組。",
-  "kickedFromTheGroup": "$name$ was removed from the group.",
-  "multipleKickedFromTheGroup": "$name$ were removed from the group.",
-  "blockUser": "Block",
-  "unblockUser": "Unblock",
-  "unblocked": "Unblocked",
-  "blocked": "Blocked",
-  "blockedSettingsTitle": "Blocked contacts",
-  "unbanUser": "Unban User",
+  "kickedFromTheGroup": "$name$ 已被移出群組。",
+  "multipleKickedFromTheGroup": "$name$ 已被移出群組。",
+  "blockUser": "封鎖",
+  "unblockUser": "解除封鎖",
+  "unblocked": "解除封鎖",
+  "blocked": "已封鎖",
+  "blockedSettingsTitle": "已封鎖的聯絡人",
+  "unbanUser": "解除封鎖用戶",
   "unbanUserConfirm": "Are you sure you want to unban user?",
-  "userUnbanned": "User unbanned successfully",
-  "userUnbanFailed": "Unban failed!",
-  "banUser": "Ban User",
+  "userUnbanned": "已解除封鎖用戶",
+  "userUnbanFailed": "解除封鎖失敗！",
+  "banUser": "封鎖用戶",
   "banUserConfirm": "Are you sure you want to ban user?",
-  "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
+  "banUserAndDeleteAll": "封鎖並刪除所有",
+  "banUserAndDeleteAllConfirm": "您要封鎖該用戶並刪除其所有訊息嗎？",
   "userBanned": "User banned successfully",
-  "userBanFailed": "Ban failed!",
-  "leaveGroup": "Leave Group",
-  "leaveAndRemoveForEveryone": "Leave Group and remove for everyone",
-  "leaveGroupConfirmation": "Are you sure you want to leave this group?",
+  "userBanFailed": "封鎖失敗！",
+  "leaveGroup": "離開群組",
+  "leaveAndRemoveForEveryone": "離開群組並爲所有人移除",
+  "leaveGroupConfirmation": "您確定要離開此群組？",
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
-  "cannotRemoveCreatorFromGroup": "Cannot remove this user",
-  "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "noContactsForGroup": "You don't have any contacts yet",
-  "failedToAddAsModerator": "Failed to add user as moderator",
+  "cannotRemoveCreatorFromGroup": "不能移除該用戶",
+  "cannotRemoveCreatorFromGroupDesc": "您不能從群組中移除群組創建者。",
+  "noContactsForGroup": "您尚未添加聯絡人",
+  "failedToAddAsModerator": "新增用戶爲版主失敗",
   "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
-  "copyMessage": "Copy message text",
-  "selectMessage": "Select message",
-  "editGroup": "Edit group",
-  "editGroupName": "Edit group name",
-  "updateGroupDialogTitle": "Updating $name$...",
-  "showRecoveryPhrase": "Recovery Phrase",
-  "yourSessionID": "Your Session ID",
-  "setAccountPasswordTitle": "Set Account Password",
+  "copyMessage": "複製訊息文字",
+  "selectMessage": "選取訊息",
+  "editGroup": "編輯群組",
+  "editGroupName": "編輯群組名稱",
+  "updateGroupDialogTitle": "更新 $name$...",
+  "showRecoveryPhrase": "回復用字句",
+  "yourSessionID": "您的 Session ID",
+  "setAccountPasswordTitle": "設置賬戶密碼",
   "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
-  "changeAccountPasswordTitle": "Change Account Password",
-  "changeAccountPasswordDescription": "Change your password",
-  "removeAccountPasswordTitle": "Remove Account Password",
+  "changeAccountPasswordTitle": "更改帳戶密碼",
+  "changeAccountPasswordDescription": "變更您的密碼",
+  "removeAccountPasswordTitle": "移除帳戶密碼",
   "removeAccountPasswordDescription": "Remove the password associated with your account",
-  "enterPassword": "Please enter your password",
-  "confirmPassword": "Confirm password",
+  "enterPassword": "請輸入您的密碼",
+  "confirmPassword": "確認密碼",
   "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
-  "showRecoveryPhrasePasswordRequest": "Please enter your password",
+  "showRecoveryPhrasePasswordRequest": "請輸入您的密碼",
   "recoveryPhraseSavePromptMain": "Your recovery phrase is the master key to your Session ID — you can use it to restore your Session ID if you lose access to your device. Store your recovery phrase in a safe place, and don't give it to anyone.",
-  "invalidOpenGroupUrl": "Invalid URL",
-  "copiedToClipboard": "Copied to clipboard",
-  "passwordViewTitle": "Type In Your Password",
+  "invalidOpenGroupUrl": "無效 URL",
+  "copiedToClipboard": "已複製到剪貼簿",
+  "passwordViewTitle": "輸入你的密碼",
   "unlock": "Unlock",
-  "password": "Password",
+  "password": "密碼",
   "setPassword": "Set Password",
   "changePassword": "Change Password",
   "removePassword": "Remove Password",
@@ -302,25 +297,25 @@
   "invalidOldPassword": "Old password is invalid",
   "invalidPassword": "Invalid password",
   "noGivenPassword": "Please enter your password",
-  "passwordsDoNotMatch": "Passwords do not match",
-  "setPasswordInvalid": "Passwords do not match",
+  "passwordsDoNotMatch": "密碼不一致",
+  "setPasswordInvalid": "密碼不一致",
   "changePasswordInvalid": "The old password you entered is incorrect",
   "removePasswordInvalid": "Incorrect password",
-  "setPasswordTitle": "Set Password",
-  "changePasswordTitle": "Changed Password",
-  "removePasswordTitle": "Removed Password",
+  "setPasswordTitle": "設定密碼",
+  "changePasswordTitle": "變更密碼",
+  "removePasswordTitle": "移除密碼",
   "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
   "removePasswordToastDescription": "You have removed your password.",
   "publicChatExists": "You are already connected to this open group",
-  "connectToServerFail": "Couldn't join group",
-  "connectingToServer": "Connecting...",
-  "connectToServerSuccess": "Successfully connected to open group",
+  "connectToServerFail": "無法加入群組",
+  "connectingToServer": "連線中",
+  "connectToServerSuccess": "成功連線至開放群組。",
   "setPasswordFail": "Failed to set password",
   "passwordLengthError": "Password must be between 6 and 64 characters long",
   "passwordTypeError": "Password must be a string",
   "passwordCharacterError": "Password must only contain letters, numbers and symbols",
-  "remove": "Remove",
+  "remove": "移除",
   "invalidSessionId": "Invalid Session ID",
   "invalidPubkeyFormat": "Invalid Pubkey Format",
   "emptyGroupNameError": "Please enter a group name",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
