--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -41,8 +41,8 @@
   "view": "Mostra",
   "youLeftTheGroup": "Heu abandonat el grup",
   "youGotKickedFromGroup": "T'han eliminat del grup.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "unreadMessage": "Missatge sense llegir",
+  "unreadMessages": "Missatges sense llegir",
   "debugLogExplanation": "Aquest registre es penjarà públicament perquè el vegin els col·laboradors. Podeu examinar-lo i editar-lo abans d'enviar-lo.",
   "debugLogError": "S'ha produït un error amb la càrrega! Considereu afegir manualment el registre a l'error que envieu.",
   "reportIssue": "Informeu d'un error",
@@ -73,6 +73,7 @@
   "attemptingReconnection": "S'intentarà de reconnectar en $reconnect_duration_in_seconds$ segons",
   "submitDebugLog": "Registre de depuració",
   "debugLog": "Registre de depuració",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Vés a les notes de versió",
   "goToSupportPage": "Vés a la pàgina de suport",
   "menuReportIssue": "Informeu d'un error",
@@ -109,13 +110,14 @@
   "continue": "Continuar",
   "error": "Error",
   "delete": "Suprimeix",
-  "deletePublicWarning": "Estàs segur? D'aquesta manera, se suprimirà aquest missatge de manera permanent per a tothom d'aquest grup obert.",
-  "deleteMultiplePublicWarning": "Estàs segur? Això eliminarà aquests missatges de manera permanent per a tothom d'aquest grup obert.",
-  "deleteWarning": "N'esteu segur? Si feu clic en «Suprimeix» aquest missatge s'esborrarà només en aquest aparell.",
-  "deleteMultipleWarning": "N'esteu segur? Si feu clic en «Suprimeix» aquest missatge s'esborrarà només en aquest dispositiu.",
   "messageDeletionForbidden": "No teniu autorització per esborrar els missatges d'altres",
-  "deleteThisMessage": "Suprimeix aquest missatge",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Suprimeix els missatges",
   "deleted": "Eliminat",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "De",
   "to": "a",
   "sent": "Enviament",
@@ -124,14 +126,6 @@
   "groupMembers": "Membres del grup",
   "moreInformation": "Més informació",
   "resend": "Reenviar",
-  "deleteMessage": "Suprimeix el missatge",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Suprimeix els missatges",
-  "deleteMessageForEveryone": "Suprimeix el missatge per a tothom",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Suprimeix el missatge per a tothom",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Voleu suprimir aquesta conversa de forma permanent?",
   "clearAllData": "Esborrar totes les dades",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Copia l'ID de Session",
   "copyOpenGroupURL": "Copia l'URL del grup",
   "save": "Desa",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Desat",
   "permissions": "Permisos",
   "general": "General",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Envia previsualitzacions d'enllaços",
   "linkPreviewDescription": "Les previsualitzacions són compatibles amb la majoria d’Urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Micròfon i càmera",
-  "mediaPermissionsDescription": "Permet l'accés a la càmera i el micròfon",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Revisar Ortografia",
   "spellCheckDescription": "Activa la comprovació ortogràfica del text introduït en el quadre d'edició de missatges",
   "spellCheckDirty": "Heu de reiniciar Session per aplicar la vostra nova configuració",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
