--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -1,5 +1,5 @@
 {
-  "privacyPolicy": "Términos y política de privacidad",
+  "privacyPolicy": "Aviso Legal y Política de Privacidad",
   "copyErrorAndQuit": "Copiar fallo y cerrar Session",
   "unknown": "Desconocido",
   "databaseError": "Fallo en la base de datos",
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Intentando volver a conectar en $reconnect_duration_in_seconds$ segundos",
   "submitDebugLog": "Registro de depuración (log)",
   "debugLog": "Registro de depuración",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Ir a las notas de versión",
   "goToSupportPage": "Ir a la página de soporte técnico",
   "menuReportIssue": "Informar de un problema",
@@ -109,13 +110,14 @@
   "continue": "Continuar",
   "error": "Fallo",
   "delete": "Eliminar",
-  "deletePublicWarning": "¿Estas seguro? El mensaje será eliminado permanentemente para todos en el grupo.",
-  "deleteMultiplePublicWarning": "¿Estás seguro? Estos mensajes se eliminarán para todos en el grupo permanentemente.",
-  "deleteWarning": "¿Estás segura? Al hacer clic en 'Eliminar' se borrará el mensaje permanentemente de este (y solamente este) dispositivo.",
-  "deleteMultipleWarning": "¿Estas seguro? Esto borrará el mensaje solo para ti permanentemente.",
   "messageDeletionForbidden": "No tienes permiso de borrar mensajes de otros",
-  "deleteThisMessage": "Eliminar mensaje",
+  "deleteJustForMe": "Eliminar solo para mí",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Eliminar mensajes",
   "deleted": "Eliminado",
+  "messageDeletedPlaceholder": "Este mensaje se ha eliminado",
   "from": "Desde:",
   "to": "Para:",
   "sent": "Enviado",
@@ -124,17 +126,9 @@
   "groupMembers": "Miembros del grupo",
   "moreInformation": "Más detalles",
   "resend": "Reenviar",
-  "deleteMessage": "Eliminar Mensaje",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Eliminar mensajes",
-  "deleteMessageForEveryone": "Borrar mensaje para todos",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Borrar mensajes para todos",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "¿Eliminar este chat permanentemente?",
   "clearAllData": "Borrar todos los datos",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "Esto eliminará permanentemente tu ID de Session, incluyendo todos los mensajes, sesiones y contactos.",
   "deleteContactConfirmation": "¿Seguro que quieres eliminar esta conversación?",
   "quoteThumbnailAlt": "Miniatura de una foto como cita de un mensaje",
   "imageAttachmentAlt": "Imagen adjunta al mensaje",
@@ -146,6 +140,7 @@
   "copySessionID": "Copiad ID de Session",
   "copyOpenGroupURL": "Copiar URL del grupo",
   "save": "Guardar",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Guardado",
   "permissions": "Permisos",
   "general": "General",
@@ -153,9 +148,9 @@
   "savedTheFile": "$name$ guardó el archivo",
   "linkPreviewsTitle": "Enviar Previsualizaciones",
   "linkPreviewDescription": "Previews are supported for most urls.",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Micrófono y Cámara",
-  "mediaPermissionsDescription": "Permitir acesso a cámara y micrófono",
+  "linkPreviewsConfirmMessage": "No tendrás una privacidad completa de metadatos al enviar previsualizaciones de enlaces.",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Revisión ortográfica",
   "spellCheckDescription": "Comprobar la ortografía al escribir el mensaje",
   "spellCheckDirty": "Debes reiniciar Session para aplicar las nuevas configuraciones",
@@ -203,7 +198,7 @@
   "timerOption_1_week": "1 semana",
   "disappearingMessages": "Desaparición de mensajes",
   "changeNickname": "Cambiar nombre de usuario",
-  "clearNickname": "Clear nickname",
+  "clearNickname": "Borrar nombre de usuario",
   "nicknamePlaceholder": "Nuevo nombre de usuario",
   "changeNicknameMessage": "Ingresa un nombre de usuario",
   "timerOption_0_seconds_abbreviated": "inactivo",
@@ -279,10 +274,10 @@
   "showRecoveryPhrase": "Frase de recuperación",
   "yourSessionID": "Tu ID de Session",
   "setAccountPasswordTitle": "Establecer contraseña de la cuenta",
-  "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
+  "setAccountPasswordDescription": "Requiere contraseña para desbloquear la pantalla de Session. Seguirás recibiendo notificaciones mientras el bloqueo de pantalla está activado. Los ajustes de notificación de Session te permiten personalizar la información que se muestra",
   "changeAccountPasswordTitle": "Cambiar la Contraseña de la Cuenta",
-  "changeAccountPasswordDescription": "Change your password",
-  "removeAccountPasswordTitle": "Remove Account Password",
+  "changeAccountPasswordDescription": "Cambia tu contraseña",
+  "removeAccountPasswordTitle": "Eliminar contraseña de cuenta",
   "removeAccountPasswordDescription": "Eliminar la contraseña asociada a tu cuenta",
   "enterPassword": "Por favor, introduce tu contraseña",
   "confirmPassword": "Confirmar contraseña",
@@ -297,7 +292,7 @@
   "setPassword": "Establecer Contraseña",
   "changePassword": "Cambiar Contraseña",
   "removePassword": "Eliminar Contraseña",
-  "maxPasswordAttempts": "Invalid Password. Would you like to reset the database?",
+  "maxPasswordAttempts": "Contraseña inválida. ¿Restablecer la base de datos?",
   "typeInOldPassword": "Por favor, escribe tu contraseña antigua",
   "invalidOldPassword": "La contraseña antigua es inválida",
   "invalidPassword": "Contraseña inválida",
@@ -306,7 +301,7 @@
   "setPasswordInvalid": "Las contraseñas no coinciden",
   "changePasswordInvalid": "La contraseña antigua que ingresaste es incorrecta",
   "removePasswordInvalid": "Contraseña incorrecta",
-  "setPasswordTitle": "Set Password",
+  "setPasswordTitle": "Establecer Contraseña",
   "changePasswordTitle": "Contraseña Cambiada",
   "removePasswordTitle": "Contraseña Eliminada",
   "setPasswordToastDescription": "Tu contraseña ha sido establecida. Por favor, manténgala segura.",
@@ -317,12 +312,12 @@
   "connectingToServer": "Conectando ...",
   "connectToServerSuccess": "Conectado con exito al grupo abierto",
   "setPasswordFail": "Error al establecer la contraseña",
-  "passwordLengthError": "Password must be between 6 and 64 characters long",
+  "passwordLengthError": "La contraseña debe tener entre 6 y 12 caracteres de longitud",
   "passwordTypeError": "La contraseña debe ser una cadena de texto",
-  "passwordCharacterError": "Password must only contain letters, numbers and symbols",
+  "passwordCharacterError": "La contraseña solo debe contener letras, números y símbolos",
   "remove": "Eliminar",
   "invalidSessionId": "ID de Session no válida",
-  "invalidPubkeyFormat": "Invalid Pubkey Format",
+  "invalidPubkeyFormat": "Formato de Clave Pública inválido",
   "emptyGroupNameError": "Por favor, ingresa un nombre de grupo",
   "editProfileModalTitle": "Perfil",
   "groupNamePlaceholder": "Nombre Del Grupo",
@@ -340,8 +335,8 @@
   "onlyAdminCanRemoveMembersDesc": "Sólo el creador del grupo puede eliminar usuarios",
   "createAccount": "Create Account",
   "signIn": "Iniciar sesión",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Iniciar en la bandeja del sistema",
+  "startInTrayDescription": "Iniciar Session como una aplicación minificada ",
   "yourUniqueSessionID": "Saluda a tu ID de Session",
   "allUsersAreRandomly...": "Tu ID de Session es la dirección única que las personas pueden usar para contactarte en Session. Por diseño, tu ID de Session es totalmente anónima y privada, sin vínculo con tu identidad real.",
   "getStarted": "Comenzar",
@@ -421,40 +416,51 @@
   "unpinConversation": "Desanclar conversación",
   "pinConversationLimitTitle": "Límite de conversaciones ancladas",
   "pinConversationLimitToastDescription": "Solo puedes anclar $number$ conversaciones",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "El primer mensaje no leído está arriba",
   "sendRecoveryPhraseTitle": "Enviando Frase de Recuperación",
   "sendRecoveryPhraseMessage": "Estás intentando enviar tu frase de recuperación, que puede utilizarse para acceder a tu cuenta. ¿Estás seguro de que deseas enviar este mensaje?",
   "dialogClearAllDataDeletionFailedTitle": "Datos no eliminados",
-  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionFailedDesc": "Los datos no se eliminaron por un error desconocido. ¿Quieres eliminarlos solo de este dispositivo?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "¿Quieres eliminar sólo los datos de este dispositivo?",
+  "dialogClearAllDataDeletionFailedMultiple": "Datos no eliminados por los siguientes nodos de servicio: $snodes$",
   "dialogClearAllDataDeletionQuestion": "¿Quieres borrar sólo este dispositivo o eliminar toda tu cuenta?",
   "deviceOnly": "Solamente en el dispositivo",
-  "entireAccount": "Entire Account",
-  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "entireAccount": "Toda la cuenta",
+  "areYouSureDeleteDeviceOnly": "¿Estás seguro de querer eliminar sólo los datos del dispositivo?",
+  "areYouSureDeleteEntireAccount": "¿Estás seguro de querer eliminar la cuenta, incluyendo los datos de red?",
+  "iAmSure": "Estoy seguro",
   "recoveryPhraseSecureTitle": "¡Ya casi has terminado!",
   "recoveryPhraseRevealMessage": "Protege tu cuenta al guardar la frase de recuperación. Revela tu frase de recuperación y guárdala de forma segura para protegerla.",
   "recoveryPhraseRevealButtonText": "Mostrar frase de recuperación",
   "notificationSubtitle": "Notificaciones - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "surveyTitle": "Realiza nuestra encuesta de Session",
+  "goToOurSurvey": "Ir a la encuesta",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
+  "accept": "Aceptar",
+  "decline": "Rechazar",
+  "endCall": "Finalizar llamada",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
+  "unableToCallTitle": "No se puede iniciar la llamada",
+  "callMissed": "Llamada perdida de $name$",
+  "callMissedTitle": "Llamada perdida",
+  "noCameraFound": "Cámara no encontrada",
+  "noAudioInputFound": "No se encontró dispositivo de sonido",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
