--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Tentative de reconnexion $reconnect_duration_in_seconds$ secondes",
   "submitDebugLog": "Journal de débogage",
   "debugLog": "Journal de débogage",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Accéder aux notes de mise à jour",
   "goToSupportPage": "Accéder à la page d’assistance",
   "menuReportIssue": "Signaler un problème",
@@ -109,13 +110,14 @@
   "continue": "Continuer",
   "error": "Erreur",
   "delete": "Supprimer",
-  "deletePublicWarning": "Êtes-vous sûr? Cela supprimera ce message pour tous les membres de ce groupe public.",
-  "deleteMultiplePublicWarning": "Êtes-vous sûr? Cela supprimera ces messages pour tous les membres de ce groupe public.",
-  "deleteWarning": "Êtes-vous certain ? Cliquer sur Supprimer éliminera définitivement ce message de cet appareil seulement.",
-  "deleteMultipleWarning": "Êtes-vous sûr? En cliquant sur 'Supprimer' cela supprimera ces messages sur cet appareil uniquement.",
   "messageDeletionForbidden": "Vous n'êtes pas autorisé à supprimer les messages des autres utilisateurs.",
-  "deleteThisMessage": "Supprimer le message",
+  "deleteJustForMe": "Supprimer juste pour moi",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Supprimer les messages",
   "deleted": "Supprimé",
+  "messageDeletedPlaceholder": "Ce message a été supprimé",
   "from": "De :",
   "to": "À :",
   "sent": "Envoyé",
@@ -124,17 +126,9 @@
   "groupMembers": "Membres du groupe",
   "moreInformation": "Plus d’informations",
   "resend": "Renvoyer",
-  "deleteMessage": "Supprimer le message",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Supprimer les messages",
-  "deleteMessageForEveryone": "Supprimer ce message pour tout le monde",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Supprimer ces messages pour tout le monde",
-  "deleteForEveryone": "Supprimer ce message",
   "deleteConversationConfirmation": "Supprimer définitivement cette conversation ?",
   "clearAllData": "Effacer toutes les données",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "Cela supprimera définitivement vos messages, vos sessions et vos contacts.",
   "deleteContactConfirmation": "Voulez-vous vraiment supprimer cette conversation ?",
   "quoteThumbnailAlt": "Imagette du message cité",
   "imageAttachmentAlt": "Image jointe au message",
@@ -146,6 +140,7 @@
   "copySessionID": "Copier la Session ID",
   "copyOpenGroupURL": "Copier l'URL de Group",
   "save": "Enregistrer",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Enregistré",
   "permissions": "Autorisations",
   "general": "Général",
@@ -153,9 +148,9 @@
   "savedTheFile": "$name$ a enregistré le média",
   "linkPreviewsTitle": "Envoyer des aperçus de liens",
   "linkPreviewDescription": "Les aperçus sont pris en charge pour la plupart des URLs",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone et caméra",
-  "mediaPermissionsDescription": "Autoriser l’accès à la caméra et au micro",
+  "linkPreviewsConfirmMessage": "Vous n'aurez pas une protection complète des métadonnées en envoyant des aperçu de liens.",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Vérification orthographique",
   "spellCheckDescription": "Activer la vérification de l’orthographe du texte saisi dans la fenêtre de rédaction des messages",
   "spellCheckDirty": "Vous devez redémarrer Session pour appliquer ces changements.",
@@ -421,6 +416,7 @@
   "unpinConversation": "Désépingler la conversation",
   "pinConversationLimitTitle": "Limite de conversation épinglée",
   "pinConversationLimitToastDescription": "Vous pouvez seulement épingler $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "Le premier message non lu se situe au-dessus",
   "sendRecoveryPhraseTitle": "Envoyer la phrase de récupération",
   "sendRecoveryPhraseMessage": "Vous essayer actuellement d’envoyer votre phrase de récupération, qui peut être utilisée pour accéder a votre compte. Êtes-vous sûre de vouloir envoyer ce message ?",
@@ -431,30 +427,40 @@
   "dialogClearAllDataDeletionQuestion": "Souhaitez-vous effacer seulement sur cet appareil ou supprimer l'ensemble de votre compte ?",
   "deviceOnly": "Appareil uniquement",
   "entireAccount": "L’ensemble du compte",
-  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "areYouSureDeleteDeviceOnly": "Êtes-vous sûr de vouloir supprimer uniquement les données de votre appareil ?",
+  "areYouSureDeleteEntireAccount": "Êtes-vous sûr de vouloir supprimer l'ensemble de votre compte, y compris les données du réseau?",
+  "iAmSure": "Je suis sûr(e)",
   "recoveryPhraseSecureTitle": "Vous avez presque terminé !",
   "recoveryPhraseRevealMessage": "Sécurisez votre compte en enregistrant votre phrase de récupération. Afficher votre phrase de récupération puis stockez-la en toute sécurité pour la sécuriser.",
   "recoveryPhraseRevealButtonText": "Afficher la phrase de récupération",
   "notificationSubtitle": "Paramètres des notifications",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
