--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Újracsatlakozási kísérlet $reconnect_duration_in_seconds$ másodperc múlva",
   "submitDebugLog": "Fejlesztői naplófájl",
   "debugLog": "Fejlesztői napló",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Release notes megnyitása",
   "goToSupportPage": "Támogatás megnyitása",
   "menuReportIssue": "Hiba bejelentése",
@@ -109,13 +110,14 @@
   "continue": "Tovább",
   "error": "Hiba",
   "delete": "Törlés",
-  "deletePublicWarning": "Biztosan ezt akarja tenni? Ez mindenki számára véglegesen törli ezt az üzenetet ebből a nyílvános csoportból.",
-  "deleteMultiplePublicWarning": "Biztosan ezt akarja tenni? Ez mindenki számára véglegesen törli ezeket az üzeneteket ebből a nyílvános csoportból.",
-  "deleteWarning": "Biztos vagy benne? A 'Törlés'-re kattintással végleg eltávolítod az üzenetet erről az eszközről.",
-  "deleteMultipleWarning": "Biztosan ezt akarja tenni? A 'Törlés' gombra kattintva végleg törli az üzeneteket erről az eszközről.",
   "messageDeletionForbidden": "Nincs joga mások üzeneteit törölni",
-  "deleteThisMessage": "Üzenet törlése",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Üzenetek törlése",
   "deleted": "Törölve",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Feladó",
   "to": "címzett",
   "sent": "Elküldve",
@@ -124,14 +126,6 @@
   "groupMembers": "Csoport tagjai",
   "moreInformation": "További információ",
   "resend": "Újraküldés",
-  "deleteMessage": "Üzenet törlése",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Üzenetek törlése",
-  "deleteMessageForEveryone": "Törölni az üzenetet mindenki számára",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Törölni az üzeneteket mindenki számára",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Véglegesen törlöd ezt a beszélgetést?",
   "clearAllData": "Az összes adat törlése",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Az ön Session azonosítójának kimásolása",
   "copyOpenGroupURL": "Csoport URL-jének másolása",
   "save": "Mentés",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Elmentve",
   "permissions": "Jogosultságok",
   "general": "Általános",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Hivatkozások előnézeti képének küldése",
   "linkPreviewDescription": "Az előnézetek a legtöbb linknél támogatottak",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Mikrofon és kamera",
-  "mediaPermissionsDescription": "Hozzáférés a kamerához és a mikrofonhoz",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Helyesírás ellenőrzése",
   "spellCheckDescription": "Az üzenetíró dobozba gépelt szöveg helyesírás-ellenőrzésének engedélyezése",
   "spellCheckDirty": "Újra kell indítanod a Session-t a beállítások érvényesítéséhez",
@@ -421,6 +416,7 @@
   "unpinConversation": "Feltűzött beszélgetés eltávolítása",
   "pinConversationLimitTitle": "Feltűzött beszélgetések limite",
   "pinConversationLimitToastDescription": "Csak $number$ beszélgetést tudsz feltűzni",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "A legkorábbi olvasatlan üzenet feljebb található",
   "sendRecoveryPhraseTitle": "Helyreállító kódmondat küldése",
   "sendRecoveryPhraseMessage": "A helyreállító kódmondatod készülsz elküldeni, amellyel hozzá lehet férni fiókodhoz. Biztosan el akarod küldeni?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Biztosítsd fiókod a helyreállítási kulcsod elmentésével. Fedd fel a kulcsod, majd biztonságosan tedd el.",
   "recoveryPhraseRevealButtonText": "Helyreállító kódmondat felfedése",
   "notificationSubtitle": "Értesítések - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
