--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Mencoba menyambung kembali dalam $reconnect_duration_in_seconds$ detik",
   "submitDebugLog": "Catatan Awakutu",
   "debugLog": "Catatan Awakutu",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Lihat Catatan Rilis",
   "goToSupportPage": "Cek halaman bantuan",
   "menuReportIssue": "Laporkan masalah ",
@@ -109,13 +110,14 @@
   "continue": "Lanjutkan",
   "error": "Galat",
   "delete": "Hapus",
-  "deletePublicWarning": "Anda yakin? Aksi ini akan menghapus pesan ini secara permanen untuk seluruh orang di grup terbuka ini.",
-  "deleteMultiplePublicWarning": "Anda yakin? Aksi ini akan menghapus pesan-pesan ini secara permanen untuk seluruh orang di grup terbuka ini.",
-  "deleteWarning": "Apakah Anda yakin? Menekan \"hapus\" akan menghapus pesan secara permanen hanya pada perangkat ini.",
-  "deleteMultipleWarning": "Anda yakin? Aksi ini akan menghapus pesan secara permanen hanya di perangkat ini.",
   "messageDeletionForbidden": "Anda tidak diizinkan untuk menghapus pesan lainnya",
-  "deleteThisMessage": "Hapus pesan",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Hapus pesan",
   "deleted": "Terhapus",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "Dari:",
   "to": "Kepada:",
   "sent": "Terkirim",
@@ -124,14 +126,6 @@
   "groupMembers": "Anggota grup",
   "moreInformation": "Informasi lebih lanjut",
   "resend": "Kirim ulang",
-  "deleteMessage": "Hapus pesan",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Hapus pesan",
-  "deleteMessageForEveryone": "Hapus pesan untuk semua",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Hapus pesan untuk semua",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Hapus obrolan ini selamanya?",
   "clearAllData": "Hapus semua data",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Salin Session ID",
   "copyOpenGroupURL": "Salin URL grup",
   "save": "Simpan",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Tersimpan",
   "permissions": "Perizinan",
   "general": "Umum",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Kirim pratinjau tautan",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Mikrofon dan kamera",
-  "mediaPermissionsDescription": "Izinkan akses ke kamera dan mikrofon",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Pemeriksa Ejaan",
   "spellCheckDescription": "Aktifkan pengecek ejaan dalam kotak pesan",
   "spellCheckDirty": "Anda harus muat ulang Session untuk terima pengaturan baru anda",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
