--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -50,16 +50,16 @@
   "submit": "გაგზავნა",
   "markAllAsRead": "ყველას მონიშვნა წაკითხულად",
   "incomingError": "Error handling incoming message",
-  "media": "Media",
-  "mediaEmptyState": "No media",
-  "documents": "Documents",
-  "documentsEmptyState": "No documents",
-  "today": "Today",
-  "yesterday": "Yesterday",
-  "thisWeek": "This week",
-  "thisMonth": "This Month",
-  "voiceMessage": "Voice Message",
-  "dangerousFileType": "For security reasons, this file type cannot be sent",
+  "media": "მედია",
+  "mediaEmptyState": "მედია ცარიელია",
+  "documents": "დოკუმენტები",
+  "documentsEmptyState": "დოკუმენტები არ არის",
+  "today": "დღეს",
+  "yesterday": "გუშინ",
+  "thisWeek": "ამ კვირაში",
+  "thisMonth": "ამ თვეს",
+  "voiceMessage": "ხმოვანი შეტყობინება",
+  "dangerousFileType": "უსაფრთხოების მიზნით, ამ ტიპის ფაილის გაგზავნა შეუძლებელია",
   "stagedPreviewThumbnail": "Draft thumbnail link preview for $domain$",
   "previewThumbnail": "Thumbnail link preview for $domain$",
   "stagedImageAttachment": "Draft image attachment: $path$",
@@ -68,37 +68,38 @@
   "maximumAttachments": "Maximum number of attachments reached. Please send remaining attachments in a separate message.",
   "fileSizeWarning": "Attachment exceeds size limits for the type of message you're sending.",
   "unableToLoadAttachment": "Sorry, there was an error setting your attachment.",
-  "offline": "Offline",
+  "offline": "ხაზგარეშე",
   "checkNetworkConnection": "Check your network connection.",
   "attemptingReconnection": "Attempting reconnect in $reconnect_duration_in_seconds$ seconds",
   "submitDebugLog": "Debug log",
   "debugLog": "Debug Log",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Go to Release Notes",
   "goToSupportPage": "Go to Support Page",
   "menuReportIssue": "Report an Issue",
-  "about": "About",
+  "about": "შესახებ",
   "speech": "Speech",
-  "show": "Show",
+  "show": "ჩვენება",
   "sessionMessenger": "Session",
-  "search": "Search",
-  "noSearchResults": "No results found for \"$searchTerm$\"",
-  "conversationsHeader": "Conversations",
-  "contactsHeader": "Contacts",
-  "messagesHeader": "Messages",
-  "settingsHeader": "Settings",
+  "search": "ძიება",
+  "noSearchResults": "\"$searchTerm$\" -ზე არაფერი მოიძებნა",
+  "conversationsHeader": "საუბრები",
+  "contactsHeader": "კონტაქტები",
+  "messagesHeader": "შეტყობინებები",
+  "settingsHeader": "პარამეტრები",
   "typingAlt": "Typing animation for this conversation",
   "contactAvatarAlt": "Avatar for contact $name$",
-  "downloadAttachment": "Download Attachment",
-  "replyToMessage": "Reply to message",
-  "replyingToMessage": "Replying to:",
+  "downloadAttachment": "მიმაგრებული ფაილის გადმოტვირთვა",
+  "replyToMessage": "პასუხი",
+  "replyingToMessage": "პასუხობთ:",
   "originalMessageNotFound": "Original message not found",
   "originalMessageNotAvailable": "Original message no longer available",
   "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
-  "recording": "Recording",
-  "you": "You",
+  "recording": "ჩანაწერი",
+  "you": "თქვენ",
   "audioPermissionNeededTitle": "Microphone Access Required",
   "audioPermissionNeeded": "You can enable microphone access under: Settings (Gear icon) => Privacy",
-  "audio": "Audio",
+  "audio": "აუდიო",
   "video": "ვიდეო",
   "photo": "ფოტო",
   "cannotUpdate": "ვერ განახლდა",
@@ -109,13 +110,14 @@
   "continue": "გაგრძელება",
   "error": "შეცდომა",
   "delete": "წაშლა",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "Are you sure? Clicking 'delete' will permanently remove this message from this device only.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteThisMessage": "Delete message",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Delete Messages",
   "deleted": "Deleted",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "From:",
   "to": "To:",
   "sent": "Sent",
@@ -124,14 +126,6 @@
   "groupMembers": "Group members",
   "moreInformation": "More information",
   "resend": "Resend",
-  "deleteMessage": "Delete Message",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Delete Messages",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete for Everyone",
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clearAllData": "Clear All Data",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Save",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Saved",
   "permissions": "Permissions",
   "general": "General",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
-  "mediaPermissionsDescription": "Allow access to camera and microphone",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Enable spell check of text entered in message composition box",
   "spellCheckDirty": "You must restart Session to apply your new settings",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
