--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -73,6 +73,7 @@
   "attemptingReconnection": "Ponowne połączenie za $reconnect_duration_in_seconds$ sekund(-y)",
   "submitDebugLog": "Wyślij log debugowania",
   "debugLog": "Dziennik Debugowania",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "Przejdź do informacji o wersji",
   "goToSupportPage": "Przejdź do strony wsparcia",
   "menuReportIssue": "Zgłoś problem",
@@ -109,13 +110,14 @@
   "continue": "Kontynuuj",
   "error": "Błąd",
   "delete": "Usuń",
-  "deletePublicWarning": "Czy na pewno? Spowoduje to permanentne usunięcie tej wiadomości dla każdego w tej otwartej grupie.",
-  "deleteMultiplePublicWarning": "Czy na pewno? Spowoduje to permanentne usunięcie tych wiadomości dla każdego w tej otwartej grupie.",
-  "deleteWarning": "Na pewno? Kliknięcie 'usuń' spowoduje bezpowrotne usunięcie wiadomości z tego urządzenia.",
-  "deleteMultipleWarning": "Czy na pewno? Kliknięcie 'usuń' spowoduje permanentne usunięcie wiadomości tylko z twojego urządzenia.",
   "messageDeletionForbidden": "Nie masz uprawnień do usunięcia wiadomości innych",
-  "deleteThisMessage": "Usuń wiadomość",
+  "deleteJustForMe": "Usuń tylko dla mnie",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Usuń konwersację",
   "deleted": "Usunięte",
+  "messageDeletedPlaceholder": "Ta wiadomość została usunięta",
   "from": "Od:",
   "to": "Do:",
   "sent": "Wysłano",
@@ -124,17 +126,9 @@
   "groupMembers": "Członkowie grupy",
   "moreInformation": "Więcej informacji",
   "resend": "Wyślij ponownie",
-  "deleteMessage": "Usuń wiadomość",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Usuń konwersację",
-  "deleteMessageForEveryone": "Usuń wiadomość dla wszystkich",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Usuń wiadomość dla wszystkich",
-  "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Usunąć trwale tę konwersację?",
   "clearAllData": "Wyczyść wszystkie dane",
-  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteAccountWarning": "Spowoduje to trwałe usunięcie wiadomości i kontaktów.",
   "deleteContactConfirmation": "Czy na pewno chcesz usunąć tę rozmowę?",
   "quoteThumbnailAlt": "Miniatura obrazu z cytowanej wiadomości",
   "imageAttachmentAlt": "Zdjęcie załączone do wiadomości",
@@ -146,6 +140,7 @@
   "copySessionID": "Skopiuj Session ID",
   "copyOpenGroupURL": "Skopiuj adres URL grupy",
   "save": "Zapisz",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "Zapisano",
   "permissions": "Uprawnienia",
   "general": "Ogólne",
@@ -153,9 +148,9 @@
   "savedTheFile": "Media zapisane przez $name$",
   "linkPreviewsTitle": "Podgląd linków",
   "linkPreviewDescription": "Previews are supported for most urls.",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Mikrofon i aparat",
-  "mediaPermissionsDescription": "Zezwól na dostęp do kamery i mikrofonu",
+  "linkPreviewsConfirmMessage": "Pełna ochrona metadanych nie będzie dostępna podczas wysyłania podglądu.",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Sprawdzanie pisowni",
   "spellCheckDescription": "Włącz sprawdzanie pisowni podczas pisania wiadomości",
   "spellCheckDirty": "Musisz zrestartować Session, aby zastosować nowe ustawienia",
@@ -421,6 +416,7 @@
   "unpinConversation": "Odepnij konwersację",
   "pinConversationLimitTitle": "Limit przypiętych konwersacji",
   "pinConversationLimitToastDescription": "Możesz przypiąć tylko $number$ konwersacji",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "Pierwsza nieprzeczytana wiadomość jest powyżej",
   "sendRecoveryPhraseTitle": "Wysyłanie frazy odzyskiwania",
   "sendRecoveryPhraseMessage": "Próbujesz wysłać frazę odzyskiwania, która może być użyta do uzyskania dostępu do twojego konta. Czy na pewno chcesz wysłać tę wiadomość?",
@@ -431,30 +427,40 @@
   "dialogClearAllDataDeletionQuestion": "Czy chcesz wyczyścić tylko to urządzenie, czy usunąć całe swoje konto?",
   "deviceOnly": "Tylko urządzenie",
   "entireAccount": "Całe konto",
-  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
-  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
-  "iAmSure": "I am sure",
+  "areYouSureDeleteDeviceOnly": "Czy na pewno chcesz usunąć swoje dane tylko z tego urządzenia?",
+  "areYouSureDeleteEntireAccount": "Czy na pewno chcesz usunąć całe swoje konto, w tym dane sieciowe?",
+  "iAmSure": "Na pewno",
   "recoveryPhraseSecureTitle": "Prawie gotowe!",
   "recoveryPhraseRevealMessage": "Zabezpiecz swoje konto zapisując frazę odzyskiwania. Zobacz frazę odzyskiwania, a następnie przechowuj ją bezpiecznie w celu zabezpieczenia.",
   "recoveryPhraseRevealButtonText": "Pokaż frazę odzyskiwania",
   "notificationSubtitle": "Powiadomienia - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
-  "surveyTitle": "Take our Session Survey",
-  "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
-  "accept": "Accept",
-  "decline": "Decline",
-  "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
-  "unableToCallTitle": "Cannot start new call",
-  "callMissed": "Missed call from $name$",
-  "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
-  "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "surveyTitle": "Weź udział w ankiecie Session",
+  "goToOurSurvey": "Przejdź do naszej ankiety",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
+  "accept": "Akceptuj",
+  "decline": "Odrzuć",
+  "endCall": "Zakończ rozmowę",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
+  "unableToCallTitle": "Nie można rozpocząć nowego połączenia",
+  "callMissed": "Nieodebrane połączenie od $name$",
+  "callMissedTitle": "Połączenie nieodebrane",
+  "noCameraFound": "Nie znaleziono kamery",
+  "noAudioInputFound": "Nie znaleziono wejścia dźwięku",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
