--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -1,7 +1,7 @@
 {
   "privacyPolicy": "නියම සහ රහස්‍යතා ප්‍රතිපත්තිය",
   "copyErrorAndQuit": "දෝෂය පිටපත් කර ඉවත්වන්න",
-  "unknown": "Unknown",
+  "unknown": "නොදන්නා",
   "databaseError": "දත්තසමුදායේ දෝෂයකි",
   "mainMenuFile": "ගොනුව (&F)",
   "mainMenuEdit": "සංස්කරණය (&E)",
@@ -9,7 +9,7 @@
   "mainMenuWindow": "කවුළුව (&W)",
   "mainMenuHelp": "උදව් (&H)",
   "appMenuHide": "සඟවන්න",
-  "appMenuHideOthers": "Hide Others",
+  "appMenuHideOthers": "අන් අය සඟවන්න",
   "appMenuUnhide": "සියල්ල පෙන්වන්න",
   "appMenuQuit": "සෙෂන් වෙතින් ඉවත්වන්න",
   "editMenuUndo": "පෙරසේ",
@@ -21,7 +21,7 @@
   "editMenuDelete": "Delete",
   "editMenuSelectAll": "Select all",
   "windowMenuClose": "කවුළුව වසන්න",
-  "windowMenuMinimize": "Minimize",
+  "windowMenuMinimize": "හකුළන්න",
   "windowMenuZoom": "විශාලනය",
   "windowMenuBringAllToFront": "Bring All to Front",
   "viewMenuResetZoom": "සැබෑ ප්‍රමාණය",
@@ -30,17 +30,17 @@
   "viewMenuToggleFullScreen": "Toggle Full Screen",
   "viewMenuToggleDevTools": "Toggle Developer Tools",
   "contextMenuNoSuggestions": "යෝජනා නැත",
-  "openGroupInvitation": "Open group invitation",
+  "openGroupInvitation": "සමූහ ඇරයුම විවෘතකරන්න",
   "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$ ට එක්වනවාද?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "ඔබට $roomName$ විවෘත සමූහයට එක්වීමට අවශ්‍ය බව විශ්වාසද?",
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "පූරණය වෙමින්…",
   "optimizingApplication": "Optimizing application...",
   "done": "Done",
   "me": "මා",
   "view": "View",
-  "youLeftTheGroup": "You have left the group.",
-  "youGotKickedFromGroup": "You were removed from the group.",
+  "youLeftTheGroup": "ඔබ සමූහය හැර ගොස් ඇත.",
+  "youGotKickedFromGroup": "ඔබව සමූහයෙන් ඉවත් කර ඇත.",
   "unreadMessage": "නොකියවූ පණිවිඩය",
   "unreadMessages": "නොකියවූ පණිවිඩ",
   "debugLogExplanation": "This log will be posted publicly online for contributors to view. You may examine and edit it before submitting.",
@@ -48,7 +48,7 @@
   "reportIssue": "Report an issue",
   "gotIt": "Got it",
   "submit": "යොමන්න",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "සියල්ල කියවූ ලෙස සලකුණු කරන්න",
   "incomingError": "Error handling incoming message",
   "media": "මාධ්‍යය",
   "mediaEmptyState": "මාධ්‍යය නැත",
@@ -59,7 +59,7 @@
   "thisWeek": "මෙම සතිය",
   "thisMonth": "මෙම මාසය",
   "voiceMessage": "හඬ පණිවිඩය",
-  "dangerousFileType": "For security reasons, this file type cannot be sent",
+  "dangerousFileType": "ආරක්‍ෂක හේතූන් මත මෙම ගොනු වර්ගය යැවීමට නොහැකිය",
   "stagedPreviewThumbnail": "Draft thumbnail link preview for $domain$",
   "previewThumbnail": "Thumbnail link preview for $domain$",
   "stagedImageAttachment": "Draft image attachment: $path$",
@@ -73,11 +73,12 @@
   "attemptingReconnection": "තත්. $reconnect_duration_in_seconds$ න් නැවත සම්බන්ධවීමට තැත් කරනු ඇත",
   "submitDebugLog": "Debug log",
   "debugLog": "Debug Log",
+  "showDebugLog": "Show Debug Log",
   "goToReleaseNotes": "නිකුතු සටහන් වෙත යන්න",
   "goToSupportPage": "සහාය පිටුවට යන්න",
   "menuReportIssue": "Report an Issue",
   "about": "පිළිබඳව",
-  "speech": "Speech",
+  "speech": "කතා කරන්න",
   "show": "පෙන්වන්න",
   "sessionMessenger": "සෙෂන්",
   "search": "සොයන්න",
@@ -109,13 +110,14 @@
   "continue": "ඉදිරියට",
   "error": "දෝෂය",
   "delete": "Delete",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "Are you sure? Clicking 'delete' will permanently remove this message from this device only.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
-  "deleteThisMessage": "Delete message",
+  "deleteJustForMe": "Delete just for me",
+  "deleteForEveryone": "Delete for everyone",
+  "deleteMessagesQuestion": "Delete those messages?",
+  "deleteMessageQuestion": "Delete this message?",
+  "deleteMessages": "Delete Messages",
   "deleted": "Deleted",
+  "messageDeletedPlaceholder": "This message has been deleted",
   "from": "වෙතින්:",
   "to": "වෙත:",
   "sent": "යැවිණි",
@@ -124,14 +126,6 @@
   "groupMembers": "{group} සාමාජිකයින්",
   "moreInformation": "තව තොරතුරු",
   "resend": "නැවත යවන්න",
-  "deleteMessage": "Delete Message",
-  "deleteMessageQuestion": "Delete message?",
-  "deleteMessagesQuestion": "Delete messages?",
-  "deleteMessages": "Delete Messages",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete for Everyone",
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clearAllData": "Clear All Data",
   "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
@@ -146,6 +140,7 @@
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "සමූහයේ ඒ.ස.නි. පිටපත්කරන්න",
   "save": "සුරකින්න",
+  "saveLogToDesktop": "Save log to desktop",
   "saved": "සුරැකිණි",
   "permissions": "අවසර",
   "general": "General",
@@ -154,8 +149,8 @@
   "linkPreviewsTitle": "සබැඳියේ පෙරදසුන් යවන්න",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
-  "mediaPermissionsDescription": "Allow access to camera and microphone",
+  "mediaPermissionsTitle": "Microphone",
+  "mediaPermissionsDescription": "Allow access to microphone",
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Enable spell check of text entered in message composition box",
   "spellCheckDirty": "You must restart Session to apply your new settings",
@@ -421,6 +416,7 @@
   "unpinConversation": "Unpin Conversation",
   "pinConversationLimitTitle": "Pinned conversations limit",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "showUserDetails": "Show User Details",
   "latestUnreadIsAbove": "නොකියවූ පළමු පණිවිඩය ඉහත ඇත",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
@@ -438,23 +434,33 @@
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "දැනුම්දීම් - $setting$",
-  "deletionTypeTitle": "Deletion Type",
-  "deleteJustForMe": "Delete just for me",
-  "messageDeletedPlaceholder": "This message has been deleted",
-  "messageDeleted": "Message deleted",
   "surveyTitle": "Take our Session Survey",
   "goToOurSurvey": "Go to our survey",
-  "incomingCall": "Incoming call",
+  "blockAll": "Block All",
+  "messageRequests": "Message Requests",
+  "requestsSubtitle": "Pending Requests",
+  "requestsPlaceholder": "No requests",
+  "messageRequestsDescription": "Enable Message Request Inbox",
+  "incomingCallFrom": "Incoming call from '$name$'",
+  "ringing": "Ringing...",
+  "establishingConnection": "Establishing connection...",
   "accept": "Accept",
   "decline": "Decline",
   "endCall": "End call",
-  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
-  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
-  "unableToCall": "cancel your ongoing call first",
+  "cameraPermissionNeededTitle": "Voice/Video Call permissions required",
+  "cameraPermissionNeeded": "You can enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "unableToCall": "Cancel your ongoing call first",
   "unableToCallTitle": "Cannot start new call",
   "callMissed": "Missed call from $name$",
   "callMissedTitle": "Call missed",
-  "startVideoCall": "Start Video Call",
   "noCameraFound": "No camera found",
-  "noAudioInputFound": "No audio input found"
+  "noAudioInputFound": "No audio input found",
+  "noAudioOutputFound": "No audio output found",
+  "callMediaPermissionsTitle": "Voice and video calls",
+  "callMissedCausePermission": "Call missed from '$name$' because you need to enable the 'Voice and video calls' permission in the Privacy Settings.",
+  "callMediaPermissionsDescription": "Allows access to accept voice and video calls from other users",
+  "callMediaPermissionsDialogContent": "The current implementation of voice/video calls will expose your IP address to the Oxen Foundation servers and the calling/called user.",
+  "menuCall": "Call",
+  "startedACall": "You called $name$",
+  "answeredACall": "Call with $name$"
 }
